manual/ru/puzzles
manual/ru/puzzles
api/ru/renderers
api/ru/scenes

--- a/manual/ru/puzzles/Camera.html
+++ b/manual/ru/puzzles/Camera.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Cameras/Lights Verge3D Puzzles Reference - Soft8Soft</title>
+    <title>Пазлы Камеры и Света - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="How to control cameras and lights in Verge3D Puzzles."/>
     <base href="../../../" />
@@ -10,23 +10,23 @@
   </head>
   <body><article>
 
-    <h1>Camera and Light Puzzles</h1>
+    <h1>Пазлы Камеры и Света</h1>
 
     <p>
-      The puzzles from this category perform operations with cameras or light sources.
+      Пазлы из этой категории выполняют операции с камерами или источниками света.
     </p>
 
     <img src="files/puzzles/puzzles-camera.jpg">
 
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:puzzles_reference]
 
-    <h2>Camera Puzzles Reference</h2>
+    <h2>Перечень Пазлов Камеры</h2>
 
 
     [anchor:look_at]
@@ -34,7 +34,7 @@
     <h3>look at</h3>
 
     <p>
-    Smoothly animates the active camera so that it finally targets a specified object. The numeric parameter specifies the time period over which the animation is performed (in seconds).
+      Плавно анимирует активную камеру так, чтобы она в итоге нацелилась на указанный объект. Числовой параметр задает период времени, в течение которого выполняется анимация (в секундах).
     </p>
 
     <img src="files/puzzles/puzzles-camera-lookat.jpg">
@@ -46,28 +46,23 @@
     <h3>tween camera</h3>
 
     <p>
-        Smoothly animates the active camera so that its position
-        finally changes to the position of a specified object / 3D point,
-        and the camera targets another specified object / 3D point.
+      Плавно анимирует активную камеру так, чтобы ее положение окончательно изменилось на положение указанного объекта / 3D-точки, и камера нацеливается на другой указанный объект / 3D-точку.
     </p>
 
     <p>
-        The position and the target parameters can be specified either by scene
-        objects or arrays of X, Y and Z coordinates.
+      Параметры позиции и цели могут быть заданы либо объектами сцены, либо массивами координат X, Y и Z.
     </p>
 
     <p>
-        The numeric parameter specifies the time period over which the
-        animation is performed (in seconds).
+      Числовой параметр задает период времени, в течение которого выполняется анимация (в секундах).
     </p>
 
     <p>
-        The *move* parameter specifies the interpolation between the starting
-        and the ending points: linear or spherical.
+      Параметр *move* задает интерполяцию между начальной и конечной точками: линейная или сферическая.
     </p>
 
     <p>
-    The optional *when finished do* slot may be used to detect the moment when the tweening is finished.
+      Дополнительный слот *when finished do* может быть использован для определения момента завершения твининга.
     </p>
 
     <img src="files/puzzles/puzzles-camera-tween-camera.jpg">
@@ -79,14 +74,11 @@
     <h3>zoom camera to object</h3>
 
     <p>
-      Smoothly zooms the active camera in or out so that the specified
-      object or a group of objects will be properly fit into the camera view.
-      The numeric parameter specifies the time period over which the zooming
-      is performed (in seconds).
+      Плавно увеличивает или уменьшает масштаб активной камеры так, чтобы указанный объект или группа объектов правильно поместились в поле зрения камеры. Числовой параметр задает период времени, в течение которого выполняется масштабирование (в секундах).
     </p>
 
     <p>
-    The optional *when finished do* slot may be used to detect the moment when the zooming is finished.
+      Дополнительный слот *when finished do* может быть использован для определения момента завершения масштабирования.
     </p>
 
     <img src="files/puzzles/puzzles-camera-zoom-camera.jpg">
@@ -98,7 +90,7 @@
     <h3>set active camera</h3>
 
     <p>
-    Makes a specified camera active. This can be used to change camera control mode ("orbit" vs "flying" vs "no controls"), field of view and other settings on the fly.
+      Делает указанную камеру активной. Можно использовать для изменения режима управления камерой ("orbit", "flying", "no controls"), поля зрения и других настроек. 
     </p>
 
     <img src="files/puzzles/puzzles-camera-set-active.jpg">
@@ -108,7 +100,7 @@
 
     <h3>active camera</h3>
 
-    <p>Retrieves the active camera.</p>
+    <p>Извлекает активную камеру.</p>
 
     <img src="files/puzzles/puzzles-camera-active-camera.jpg" style="max-width: 732px">
 
@@ -118,18 +110,18 @@
     <h3>autorotate camera</h3>
 
     <p>
-    Smoothly animates the active *Orbit* camera by rotating it around the target.
+      Плавно анимирует активную камеру *Orbit*, вращая ее вокруг цели.
     </p>
 
     <img src="files/puzzles/puzzles-camera-autorotate-camera.jpg">
 
     <p>
-    In the following example, the camera starts to rotate after 3 seconds of user inactivity. When the user clicks a mouse button (or touches the screen), he or she regains the control over the camera until further 3 second period of inactivity.
+      В следующем примере камера начинает вращаться после 3 секунд бездействия пользователя. Когда пользователь нажимает на кнопку мыши (или касается экрана), он восстанавливает контроль над камерой до следующего 3-секундного периода бездействия.
     </p>
 
     <img src="files/puzzles/puzzles-camera-autorotate-camera-example.jpg">
 
-    <p class="note">To rotate camera in reverse direction set negative *speed* value, e.g *-2*.</p>
+    <p class="note">Для поворота камеры в обратном направлении установите отрицательное значение *speed*, например, *-2*.</p>
 
 
 
@@ -138,48 +130,49 @@
     <h3>get camera direction</h3>
 
     <p>
-    Returns a list of X, Y and Z components of the active camera's world direction vector. If *from mouse/touch* is checked, this puzzle casts a ray from the camera to the cursor's screen position and returns the direction of that ray. If additionaly *inverted* is checked, then the cursor's screen position coordinates are negated.
+      Возвращает список компонентов X, Y и Z мирового вектора направления активной камеры. Если отмечено *from mouse/touch*, то этот пазл бросает луч из камеры в экранную позицию курсора и возвращает направление этого луча. Если дополнительно отмечено *inverted*, то координаты экранной позиции курсора отрицаются.
     </p>
 
     <img src="files/puzzles/puzzles-camera-get-camera-direction.jpg">
 
     <p>
-    In the following example, an object looks at the mouse cursor. This can be achived by mapping the position of an empty/dummy object to mouse cursor with some simple math.
+      В следующем примере объект смотрит на курсор мыши. Этого можно добиться, сопоставив положение пустого/фиктивного объекта с курсором мыши с помощью простой математики.
     </p>
 
     <img src="files/puzzles/puzzles-camera-get-camera-direction-example2.jpg">
 
     <p>
-    In order to setup such behavior in 3ds Max, make your object follow a dummy object by utilizing the *Rotation Controllers / LookAt Constraint*. In Blender, this corresponds to the *TrackTo* constraint.
+      Чтобы настроить такое поведение в 3ds Max, заставьте ваш объект следовать за фиктивным объектом, используя *Rotation Controllers / LookAt Constraint*. В Blender это соответствует ограничению *TrackTo*.
     </p>
 
 
     [anchor:light_puzzles_reference]
 
-    <h2>Light Puzzles Reference</h2>
+    <h2>Перечень Пазлов Освещения</h2>
 
 
     [anchor:set_light_param]
 
     <h3>set light param</h3>
 
-    <p>Set light parameter:</p>
+    <p>Установите параметр освещения:</p>
 
     <dl>
       <dt>color (vector)<dt>
-      <dd>Set light color using vector, where X, Y, Z represent R, G, or B color component accordingly. For example <strong>[0, 1, 0]</strong> vector represent pure green color.</dd>
+      <dd>Установите цвет света с помощью вектора, где X, Y, Z представляют R, G или B компонент цвета соответственно. Например, вектор <strong>[0, 1, 0]</strong> представляет чистый зеленый цвет.</dd>
 
       <dt>color (css/rgb)<dt>
-      <dd>Set light color using CSS style string such as <strong>rgb(255, 0, 0)</strong> or *magenta*.</dd>
+      <dd>Установите цвет света, используя строку стиля CSS, например <strong>rgb(255, 0, 0)</strong> или *magenta*.</dd>
 
       <dt>color (css/hex)<dt>
-      <dd>Set light color using CSS hex string such as <strong>#FF0000</strong>.</dd>
+      <dd>Установите цвет освещения с помощью шестнадцатеричной строки CSS, например <strong>#FF0000</strong>.</dd>
 
       <dt>intensity<dt>
-      <dd>Set light intensity.</dd>
+      <dd>Установите интенсивность освещения.</dd>
     </dl>
 
-    <p>This puzzle also works for a list of objects, a group (or a list of groups) or with the <a href="manual/ru/puzzles/Selectors.html#all_objects">all objects</a> puzzle.</p>
+    <p>Этот пазл также подходит для списка объектов, группы (или списка групп) или для пазла <a href="manual/ru/puzzles/Selectors.html#all_objects">all objects</a>.
+    </p>
 
     <img src="files/puzzles/puzzles-object-set-light-param.jpg">
 
@@ -188,14 +181,14 @@
 
     <h3>get light param</h3>
 
-    <p>Get light parameter. See description on <a href="manual/ru/puzzles/Objects.html#set_light_param">set light param</a> puzzle for the list of parameters.</p>
+    <p>Получить параметр освещения. Список параметров смотрите в описании пазла <a href="manual/ru/puzzles/Objects.html#set_light_param">set light param</a>.</p>
 
     <img src="files/puzzles/puzzles-object-get-light-param.jpg">
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблемы с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обращайтесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
 
   </article></body>
