--- a/manual/ru/puzzles/Debug.html
+++ b/manual/ru/puzzles/Debug.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Debug Puzzles Reference - Soft8Soft</title>
+    <title>Пазлы Отладки - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="These puzzles may be used to retrieve and print values of variables, measure the performance, and retrieve the GPU information."/>
     <base href="../../../" />
@@ -10,30 +10,30 @@
   </head>
   <body><article>
 
-    <h1>Debug Puzzles</h1>
+    <h1>Пазлы Отладки</h1>
 
     <p>
-    These puzzles may be used to retrieve and print values of variables, measure the performance, and retrieve the GPU information.
+      Эти пазлы можно использовать для получения и вывода значений переменных, измерения производительности и получения информации о GPU.
     </p>
 
     <img src="files/puzzles/puzzles-debug.jpg">
 
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:puzzles_reference]
 
-    <h2>Puzzles Reference</h2>
+    <h2>Перечень Пазлов</h2>
 
     [anchor:print_to_console]
 
     <h3>print to console</h3>
 
     <p>
-    Prints data of any type to the browser console. The latter can usually be opened with the F12 key (Chrome, Firefox on Windows, Linux). On Mac use the View > Developer > JavaScript Console menu (Option-Cmd-J) in Chrome, or the Develop > Show Error Console menu (Option-Cmd-C) in Safari.
+      Выводит данные любого типа в консоль браузера. Последнюю обычно можно открыть клавишей F12 (Chrome, Firefox в Windows, Linux). На Mac используйте меню View > Developer > JavaScript Console (Option-Cmd-J) в Chrome или меню Develop > Show Error Console (Option-Cmd-C) в Safari.
     </p>
 
     <img src="files/puzzles/puzzles-debug-print-console.jpg">
@@ -45,7 +45,7 @@
     <h3>print performance info</h3>
 
     <p>
-    Records a performance profile during 1 second and prints it to the browser console. The latter can usually be opened with the F12 key (Chrome, Firefox on Windows, Linux). On Mac use the View > Developer > JavaScript Console menu (Option-Cmd-J) in Chrome, or the Develop > Show Error Console menu (Option-Cmd-C) in Safari.
+      Записывает профиль производительности в течение 1 секунды и выводит его в консоль браузера. Последнюю обычно можно открыть клавишей F12 (Chrome, Firefox в Windows, Linux). На Mac используйте меню View > Developer > JavaScript Console (Option-Cmd-J) в Chrome или меню Develop > Show Error Console (Option-Cmd-C) в Safari.
     </p>
 
     <img src="files/puzzles/puzzles-debug-print-performance-info.jpg">
@@ -57,15 +57,15 @@
     <h3>get GPU</h3>
 
     <p>
-    Outputs the user's GPU info - vendor, for example: NVIDIA Corporation, Apple Inc., Qualcomm, and GPU model, for example: GeForce GTX 1060 3GB/PCIe/SSE2, Apple A9 GPU, Adreno (TM) 330.
+      Выводит информацию о GPU пользователя - производитель, например: NVIDIA Corporation, Apple Inc., Qualcomm, и модель GPU, например: GeForce GTX 1060 3GB/PCIe/SSE2, Apple A9 GPU, Adreno (TM) 330.
     </p>
 
     <img src="files/puzzles/puzzles-debug-get-GPU.jpg">
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблемы с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обращайтесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
   </article></body>
 </html>
