--- a/manual/ru/puzzles/Dictionaries.html
+++ b/manual/ru/puzzles/Dictionaries.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Dictionaries Puzzles Reference - Soft8Soft</title>
+    <title>Пазлы Словарей - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Use dictionary puzzles to effectively store, transfer and retrieve various data in Verge3D applications."/>
     <base href="../../../" />
@@ -10,22 +10,22 @@
   </head>
   <body><article>
 
-    <h1>Dictionaries</h1>
+    <h1>Словари</h1>
 
     <p>
-    The puzzles from this category allow you to effectively store, transfer and retrieve various data. Particularly, a dictionary is useful for storing multiple parameters and for passing them in bulk from and to JavaScript and over network.
+      Головоломки из этой категории позволяют эффективно хранить, передавать и извлекать различные данные. В частности, словарь полезен для хранения множества параметров и их массовой передачи из и в JavaScript и по сети.
     </p>
 
     <img src="files/puzzles/puzzles-dictionaries.jpg">
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:puzzles_reference]
 
-    <h2>Puzzles Reference</h2>
+    <h2>Перечень Пазлов</h2>
 
 
     [anchor:create_empty_dict]
@@ -33,13 +33,13 @@
     <h3>create empty dict</h3>
 
     <p>
-    Returns a dictionary containing no data records.
+      Возвращает словарь, не содержащий записей данных.
     </p>
 
     <img src="files/puzzles/puzzles-dictionaries-create-empty-dict.jpg">
 
     <p>
-    In JavaScript, a dictionary is represented by an *Object* without any properties, that is { }.
+      В JavaScript словарь представлен *Объектом* без свойств, то есть { }.
     </p>
 
 
@@ -48,7 +48,7 @@
     <h3>dict set key</h3>
 
     <p>
-    Sets the item to be associated with a specified key in a dictionary. The key must be a text, while the assigned value may be of any type (text, number, list, other dictionary, etc).
+      Устанавливает элемент, который будет связан с указанным ключом в словаре. Ключ должен быть текстом, а присвоенное значение может быть любого типа (текст, число, список, другой словарь и т.д.).
     </p>
 
     <img src="files/puzzles/puzzles-dictionaries-dict-set-key.jpg">
@@ -60,7 +60,7 @@
     <h3>dict get key</h3>
 
     <p>
-    Returns the item associated with a specified key in a dictionary.
+      Возвращает элемент, связанный с указанным ключом в словаре.
     </p>
 
     <img src="files/puzzles/puzzles-dictionaries-dict-get-key.jpg">
@@ -72,7 +72,7 @@
     <h3>get keys</h3>
 
     <p>
-    Returns a list of all keys present in a dictionary.
+      Возвращает список всех ключей, присутствующих в словаре.
     </p>
 
     <img src="files/puzzles/puzzles-dictionaries-get-keys.jpg">
@@ -84,7 +84,7 @@
     <h3>dict check key</h3>
 
     <p>
-    Checks if a specified key is present in a dictionary, and returns the Boolean-typed result *true* or *false*.
+      Проверяет, присутствует ли указанный ключ в словаре, и возвращает результат с булевым типом *true* или *false*.
     </p>
 
     <img src="files/puzzles/puzzles-dictionaries-dict-check-key.jpg">
@@ -96,7 +96,7 @@
     <h3>dict remove key</h3>
 
     <p>
-    Removes the item associated with a specified key in a dictionary, and deletes the key itself.
+      Удаляет элемент, связанный с указанным ключом в словаре, и удаляет сам ключ.
     </p>
 
     <img src="files/puzzles/puzzles-dictionaries-dict-remove-key.jpg">
@@ -108,7 +108,7 @@
     <h3>is empty</h3>
 
     <p>
-    Checks if a specified dictionary contains no keys, and returns the Boolean-typed result *true* or *false*.
+      Проверяет, не содержит ли указанный словарь ключей, и возвращает результат с булевым типом *true* или *false*.
     </p>
 
     <img src="files/puzzles/puzzles-dictionaries-is-empty.jpg">
@@ -116,14 +116,14 @@
 
     [anchor:see_also]
 
-    <h2>See Also</h2>
+    <h2>Смотрите Также</h2>
 
-    <p>Dictionaries store elements by names. If you need an ordered storage with indexed elements, refer to <a href="manual/ru/puzzles/Lists.html">lists</a>.</p>
+    <p>Словари хранят элементы по именам. Если вам нужно упорядоченное хранение с индексированными элементами, обратитесь к <a href="manual/ru/puzzles/Lists.html">lists</a>.</p>
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблемы с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обращайтесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
 
   </article></body>
 </html>
