--- a/manual/ru/puzzles/ECommerce.html
+++ b/manual/ru/puzzles/ECommerce.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>E-Commerce Plugin Reference - Soft8Soft</title>
+    <title>Плагин E-Commerce - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Puzzles from this plugin are used for implementing WooCommerce product 3D views and configurators, as well as for creating standalone order/inquiry forms."/>
     <base href="../../../" />
@@ -10,35 +10,33 @@
   </head>
   <body><article>
 
-    <h1>E-Commerce Plugin</h1>
+    <h1>Плагин E-Commerce</h1>
 
     <p>
-        This stock <a href="manual/ru/puzzles/Plugins.html">plugin</a> adds
-        puzzles that can be used for implementing WooCommerce 3D product views
-        and configurators, as well as for creating standalone order/inquiry forms.
+      Этот стоковый <a href="manual/ru/puzzles/Plugins.html">плагин</a> добавляет пазлы, которые могут быть использованы для реализации представлений товаров и конфигураторов в WooCommerce 3D , а также для создания автономных форм заказа/запроса.
     </p>
 
     <img src="files/puzzles/puzzles-ecommerce.jpg">
 
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:puzzles_reference]
 
-    <h2>Puzzles Reference</h2>
+    <h2>Перечень Пазлов</h2>
 
     [anchor:woo_connect]
 
     <h3>connect to WooCommerce</h3>
 
-    <p>Connect to WooCommerce system to start receiving product information.</p>
+    <p>Подключитесь к системе WooCommerce, чтобы начать получать информацию о продукте.</p>
 
     <img src="files/puzzles/puzzles-ecommerce-connect-to-woocommerce.jpg">
 
-    <p>See <a href="https://www.soft8soft.com/making-3d-product-configurator-for-woocommerce/" target="_blank">this tutorial</a> for more details.</p>
+    <p>Посмотрите этот <a href="https://www.soft8soft.com/making-3d-product-configurator-for-woocommerce/" target="_blank">урок</a> для получения подробной информации.</p>
 
 
 
@@ -46,19 +44,21 @@
 
     <h3>product info</h3>
 
-    <p>Returns a <a href="manual/ru/puzzles/Dictionaries.html">dictionary</a> with product information retrieved by the *connect to WooCommerce* puzzle. This dictionary (a JavaScript object) contains the following fields:</p>
+    <p>
+      Возвращает <a href="manual/ru/puzzles/Dictionaries.html">словарь</a> с информацией о продукте, полученной с помощью команды *connect to WooCommerce*. Этот словарь (объект JavaScript) содержит следующие поля:
+    </p>
 
     <p><ul>
-      <li>*price* - price for the product option selected by the customer, e.g. 12.</li>
-      <li>*quantity* - quantity of the product items selected by the customer, e.g. 2.</li>
-      <li>*sku* - stock keeping unit for the product option selected by the customer.</li>
-      <li>*name* - the name of the product as it will be seen in the shop cart, e.g. "Spinner - Yellow, Large".</li>
-      <li>*attributes* - a dictionary with attribute names/values pairs for the product option selected by the customer, e.g. {color: "Yellow", size: "Large"}.</li>
-      <li>*weight* - physical product weight for the product option selected by the customer.</li>
-      <li>*length*, *width*, *height* - physical product dimensions for the product option selected by the customer.</li>
-      <li>*type* - product type as specified in WooCommerce admin panel, one of the following: "variable", "simple", "group" or "external".</li>
-      <li>*children* - only available for "group" products. Includes information on the per-subproduct basis.</li>
-      <li>*status* - server response: "ok" or "error".</li>
+      <li>*price* - цена для выбранного клиентом варианта продукта, например, 12.</li>
+      <li>*quantity* - количество выбранных клиентом товарных позиций, например, 2.</li>
+      <li>*sku* - складская единица для выбранного клиентом варианта продукта.</li>
+      <li>*name* - название товара, которое будет отображаться в корзине, например, "Спиннер - желтый, большой".</li>
+      <li>*attributes* - словарь с парами имен/значений атрибутов для выбранного клиентом варианта продукта, например {цвет: "Желтый", размер: "Большой"}.</li>
+      <li>*weight* - физический вес продукта для выбранного клиентом варианта продукта.</li>
+      <li>*length*, *width*, *height* - физические размеры продукта для выбранного клиентом варианта продукта.</li>
+      <li>*type* - тип товара, указанный в панели администратора WooCommerce, один из следующих: "variable", "simple", "group" или "external".</li>
+      <li>*children* - доступна только для "групповых" продуктов. Включает информацию по каждому субпродукту.</li>
+      <li>*status* - ответ сервера: "ok" или "error".</li>
     </ul></p>
 
     <img src="files/puzzles/puzzles-ecommerce-product-info.jpg">
@@ -68,7 +68,7 @@
 
     <h3>product attribute</h3>
 
-    <p>Returns the value for an attribute of the product option selected by the customer, e.g. "Yellow".</p>
+    <p>Возвращает значение атрибута выбранного клиентом варианта товара, например, "Желтый".</p>
 
     <img src="files/puzzles/puzzles-ecommerce-product-attribute.jpg">
 
@@ -81,27 +81,27 @@
     <h3>place order</h3>
 
     <p>
-    Composes a hidden order form with the "title", "contents" and "total price" fields and an optional screenshot and submits this form to a specified URL according to the specification explicated in the Wordpress Plugin section. By default the order form is submitted to the <a href="https://sandbox.soft8soft.com/order-form/" target="_blank">demo ordering page</a>.
+      Составляет скрытую форму заказа с полями "title", "contents" и"total price", необязательным скриншотом и отправляет эту форму на указанный URL в соответствии со спецификацией, описанной в разделе Wordpress Plugin. По умолчанию форма заказа отправляется на <a href="https://sandbox.soft8soft.com/order-form/" target="_blank">страницу заказа демо-версии</a>.
     </p>
 
     <p>
-    Verge3D comes with a free Wordpress plug-in that is able to handle requests submitted by this puzzle. Upon receiving such a request, this Wordpress plug-in renders a page with an extended form supplemented with contact and comments fields, the embedded screenshot and a captcha. Filled out form is finally submitted by the customer and a new order is created in Wordpress admin interface. Both the customer and the sales manager are notified about the order by e-mail.
+      Verge3D поставляется с бесплатным плагином Wordpress, который способен обрабатывать запросы, отправленные этим пазлом. При получении такого запроса этот плагин Wordpress отображает страницу с расширенной формой, дополненной полями контактов и комментариев, встроенным скриншотом и капчей. В итоге заполненная форма отправляется клиентом, и в админ-интерфейсе Wordpress создается новый заказ. И клиент, и менеджер по продажам получают уведомление о заказе по электронной почте.
     </p>
 
     <p>
-    Please refer to the <a href="manual/ru/introduction/Wordpress-Plugin.html">Wordpress Plugin</a> section of this Manual for setup information.
+      Информацию о настройке смотрите в разделе <a href="manual/ru/introduction/Wordpress-Plugin.html">Плагин Wordpress</a> данного руководства.
     </p>
 
     <p>
-    Be sure to enable screenshots in the <a href="manual/ru/puzzles/Initialization.html#configure_application" target="_parent">configure application</a> puzzle otherwise the screenshot may be rendered in black.
+      Обязательно включите скриншоты в пазле <a href="manual/ru/puzzles/Initialization.html#configure_application" target="_parent">configure application</a>, иначе скриншот может отображаться черным цветом.
     </p>
 
     <img src="files/puzzles/puzzles-misc-place-order.jpg">
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблемы с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обратитесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
   </article></body>
 </html>
