--- a/manual/ru/puzzles/Lists.html
+++ b/manual/ru/puzzles/Lists.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Lists Puzzles Reference - Soft8Soft</title>
+    <title>Пазлы Списков - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="These puzzles provide means for various operations with lists in your scenario."/>
     <base href="../../../" />
@@ -10,31 +10,31 @@
   </head>
   <body><article>
 
-    <h1>Lists</h1>
+    <h1>Списки</h1>
 
     <p>
-    A list is an ordered collection of items, such as a "to do" list or a shopping list. Items in a list may be of any type, and the same value may appear more than once in a list.
+    Список - это упорядоченная коллекция элементов, например, список "to do" или список покупок. Элементы в списке могут быть любого типа, и одно и то же значение может появляться в списке несколько раз.
     </p>
 
     <img src="files/puzzles/puzzles-lists.jpg" style="max-width: 1000px">
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:introduction]
 
-    <h2>Introduction</h2>
+    <h2>Введение</h2>
 
     <p>
-    Lists are very useful when you need to handle multiple items, such as objects, in bulk. Besides that, in a list you can store any kind of information, such as configurable options, properties of similar HTML elements, RGB values, coordinates, etc.
+    Списки очень полезны, когда вам нужно обработать несколько элементов, например, объектов, в большом количестве. Кроме того, в списке можно хранить любую информацию, например, настраиваемые параметры, свойства похожих элементов HTML, значения RGB, координаты и т.д.
     </p>
 
 
     [anchor:puzzles_reference]
 
-    <h2>Puzzles Reference</h2>
+    <h2>Перечень Пазлов</h2>
 
 
     [anchor:create]
@@ -42,19 +42,19 @@
     <h3>create</h3>
 
     <p>
-    This puzzle allows you to create a new list and specify the initial values. Additional inputs are added by dragging an *item* block from the gray toolbox on the left into the *list* block.
+    Этот пазл позволяет создать новый список и указать начальные значения. Дополнительные исходные данные добавляются путем перетаскивания блока *item* из серой панели инструментов слева в блок *list*.
     </p>
 
     <img src="files/puzzles/puzzles-lists-create.jpg" style="max-width: 1000px">
 
     <p>
-    The following example hides all 3 objects specified in the list once the user clicks on the cube.
+    Следующий пример скрывает все 3 объекта, указанные в списке, как только пользователь щелкает на кубе.
     </p>
 
     <img src="files/puzzles/puzzles-lists-create-example.jpg" style="max-width: 1000px">
 
     <p>
-    Lists can be nested (e.g. list of lists), or have no entries specified at any of the positions. In the latter case a <a href="manual/ru/puzzles/Logic.html#null">null</a> value is automatically put in a missed position.
+    Списки могут быть вложенными (например, список списков) или не иметь записей, указанных в какой-либо из позиций. В последнем случае в пропущенную позицию автоматически помещается значение <a href="manual/ru/puzzles/Logic.html#null">null</a>.
     </p>
 
     <img src="files/puzzles/puzzles-lists-create-example2.jpg" style="max-width: 1000px">
@@ -66,13 +66,13 @@
     <h3>length</h3>
 
     <p>
-    This puzzle counts the number of items in the specified list. The <a href="manual/ru/puzzles/Logic.html#null">null</a> values automatically inserted in missed positions will also be counted.
+    Этот пазл подсчитывает количество элементов в указанном списке. Значения <a href="manual/ru/puzzles/Logic.html#null">null</a>, автоматически вставленные в пропущенные позиции, также будут подсчитаны.
     </p>
 
     <img src="files/puzzles/puzzles-lists-length.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-lists-length-example.jpg" style="max-width: 1000px">
@@ -84,13 +84,13 @@
     <h3>get / remove</h3>
 
     <p>
-    This puzzle retrieves (and / or removes) the item from the specified position (items in a list are indexed starting from 0).
+    Этот пазл извлекает (и/или удаляет) элемент с указанной позиции (элементы в списке индексируются, начиная с 0).
     </p>
 
     <img src="files/puzzles/puzzles-lists-get-remove.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-lists-get-remove-example.jpg" style="max-width: 1000px">
@@ -102,13 +102,13 @@
     <h3>set / insert</h3>
 
     <p>
-    This puzzle allows you to add items to a list. The *set* variant replaces the item at a specified position in a list with a different item (the length of the list stays the same). The *insert* variant adds a new item into the list at the specified position, shifting the item previously at that position (thus increasing the length of the list). Remember that items in a list are indexed starting from 0.
+    Этот пазл позволяет добавлять элементы в список. Вариант *set* заменяет элемент на указанной позиции в списке другим элементом (длина списка остается прежней). Вариант *insert* добавляет новый элемент в список на указанную позицию, смещая элемент, находившийся ранее на этой позиции (тем самым увеличивая длину списка). Помните, что элементы в списке индексируются, начиная с 0.
     </p>
 
     <img src="files/puzzles/puzzles-lists-set-insert.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-lists-set-insert-example.jpg" style="max-width: 1000px">
@@ -120,13 +120,13 @@
     <h3>create empty</h3>
 
     <p>
-    This puzzle creates a new blank list to be filled with items later.
+    Этот пазл создает новый пустой список, который будет заполнен элементами позже.
     </p>
 
     <img src="files/puzzles/puzzles-lists-create-empty.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-lists-create-empty-example.jpg" style="max-width: 1000px">
@@ -138,13 +138,13 @@
     <h3>create with item repeated</h3>
 
     <p>
-    This puzzle creates a new list and initiates all the positions with the same given item. The main difference with the *create empty* variant is that the list is initialized with a predefined length, and with some initial values.
+    Этот пазл создает новый список и инициализирует все позиции с одним и тем же заданным элементом. Основное отличие от варианта *create empty* в том, что список инициализируется с заранее определенной длиной и с некоторыми начальными значениями.
     </p>
 
     <img src="files/puzzles/puzzles-lists-create-with-item-repeated.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-lists-create-with-item-repeated-example.jpg" style="max-width: 1000px">
@@ -156,13 +156,13 @@
     <h3>reverse</h3>
 
     <p>
-    This puzzle creates <i>a new list</i> filled with the items from the original list in reverse order. The original list will not be changed.
+    Этот пазл создает <i>новый список</i>, заполненный элементами из исходного списка в обратном порядке. Исходный список не будет изменен.
     </p>
 
     <img src="files/puzzles/puzzles-lists-reverse.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-lists-reverse-example.jpg" style="max-width: 1000px">
@@ -174,13 +174,13 @@
     <h3>is empty</h3>
 
     <p>
-    This puzzle checks if a specified list does not contain any items, and returns *true* in such the case, or *false* otherwise. For using with <a href='manual/ru/puzzles/Logic.html'>Logic</a> puzzles.
+    Этот пазл проверяет, не содержит ли заданный список элементов, и выдает *true* в этом случае, или *false* в противном. Для использования с пазлами <a href='manual/ru/puzzles/Logic.html'>Логики</a>.
     </p>
 
     <img src="files/puzzles/puzzles-lists-is-empty.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-lists-is-empty-example.jpg" style="max-width: 1000px">
@@ -192,13 +192,13 @@
     <h3>find</h3>
 
     <p>
-    This puzzle can be used to check whether an item is contained in a list and, if so, where it appears. If the item was found, it returns its position (items in list are indexed starting from 0). If the item was not found, the puzzle returns -1.
+    Этот пазл может быть использован для проверки того, содержится ли элемент в списке и, если да, то где он находится. Если элемент найден, то выдается его позиция (элементы в списке индексируются, начиная с 0). Если элемент не найден, пазл возвращает -1.
     </p>
 
     <img src="files/puzzles/puzzles-lists-find.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-lists-find-example.jpg" style="max-width: 1000px">
@@ -209,7 +209,7 @@
     <h3>check item</h3>
 
     <p>
-    This puzzle can be used to check whether an item is contained in a list. If the item was found, it returns boolean value <em>true</em> . If the item was not found, the puzzle returns <em>false</em>.
+    Этот пазл может быть использован для проверки того, содержится ли элемент в списке. Если элемент найден, то выдается булево значение <em>true</em>. Если элемент не найден, пазл выдает значение <em>false</em>.
     </p>
 
     <img src="files/puzzles/puzzles-lists-check-item.jpg">
@@ -220,13 +220,13 @@
     <h3>get sub-list</h3>
 
     <p>
-    This puzzle allows a region of list between two specified positions to be extracted as new list (items in list are indexed starting from 0). The original list will not be changed.
+    Этот пазл позволяет извлечь область списка между двумя указанными позициями в качестве нового списка (элементы в списке индексируются, начиная с 0). Исходный список при этом не изменяется.
     </p>
 
     <img src="files/puzzles/puzzles-lists-get-sub-list.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-lists-get-sub-list-example.jpg" style="max-width: 1000px">
@@ -238,13 +238,13 @@
     <h3>sort</h3>
 
     <p>
-    This puzzle creates <i>a new list</i> filled with the items from the original list sorted in ascending or descending order. The original list will not be changed.
+    Этот пазл создает <i>новый список</i>, заполненный элементами из исходного списка, отсортированными в порядке возрастания или убывания. Исходный список не будет изменен.
     </p>
 
     <img src="files/puzzles/puzzles-lists-sort.jpg" style="max-width: 1000px">
 
     <p>
-    Examples:
+    Примеры:
     </p>
 
     <img src="files/puzzles/puzzles-lists-sort-example.jpg" style="max-width: 1000px">
@@ -256,19 +256,19 @@
     <h3>list from text / text from list</h3>
 
     <p>
-    This puzzle allows you to create a list by splitting some text, or do the opposite - join list items into a line of text.
+    Этот пазл позволяет создать список, разделив некоторый текст, или сделать обратное - объединить элементы списка в строку текста.
     </p>
 
     <img src="files/puzzles/puzzles-lists-list-text-conversion.jpg" style="max-width: 1000px">
 
     <p>
-    Example for text splitting into list:
+    Пример разбивки текста в список:
     </p>
 
     <img src="files/puzzles/puzzles-lists-list-text-conversion-example.jpg" style="max-width: 1000px">
 
     <p>
-    Example for list joining into text:
+    Пример объединения списка в текст:
     </p>
 
     <img src="files/puzzles/puzzles-lists-list-text-conversion-example2.jpg" style="max-width: 1000px">
@@ -276,14 +276,14 @@
 
     [anchor:see_also]
 
-    <h2>See Also</h2>
+    <h2>Смотрите Также</h2>
 
-    <p>Lists store elements by numeric index. If you need a storage with named elements, refer to <a href="manual/ru/puzzles/Dictionaries.html">dictionaries</a>.</p>
+    <p>Списки хранят элементы по числовому индексу. Если вам нужно хранилище с именованными элементами, обратитесь к <a href="manual/ru/puzzles/Dictionaries.html">словарям</a>.</p>
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблема с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обращайтесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
   </article></body>
 </html>
