--- a/manual/ru/puzzles/Logic.html
+++ b/manual/ru/puzzles/Logic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Logic Puzzles Reference - Soft8Soft</title>
+    <title>Пазлы Логики - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Logic puzzles provide conditional expressions to perform different computations or actions depending on whether a condition is met."/>
     <base href="../../../" />
@@ -10,22 +10,22 @@
   </head>
   <body><article>
 
-    <h1>Logic Puzzles</h1>
+    <h1>Пазлы Логики</h1>
 
     <p>
-    These puzzles provide conditional expressions to perform different computations or actions depending on whether a condition is met.
+    Эти пазлы предоставляют условные выражения для выполнения различных вычислений или действий в зависимости от того, выполняется ли условие.
     </p>
 
     <img src="files/puzzles/puzzles-logic.jpg" style="max-width: 1000px">
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:puzzles_reference]
 
-    <h2>Puzzles Reference</h2>
+    <h2>Перечень Пазлов</h2>
 
 
     [anchor:if_else]
@@ -33,25 +33,25 @@
     <h3>if / else</h3>
 
     <p>
-    With these puzzles, you can implement branching (control flow) in your puzzles.
+    С помощью этих пазлов вы можете реализовать разветвление (поток управления) в своих пазлах.
     </p>
 
     <img src="files/puzzles/puzzles-logic-if-else.jpg" style="max-width: 1000px">
 
     <p>
-    Suppose, you got a cube and a sphere in your scene. When the user clicks on the sphere, you want to hide it, but <i>only if the user has clicked on the cube before</i>. Such a scenario can easily be implemented with a <a href="manual/ru/puzzles/Variables.html">variable</a> for remembering if the cube has ever been clicked:
+    Предположим, в вашей сцене есть куб и сфера. Когда пользователь кликает по сфере, вы хотите скрыть ее, но <i>только если пользователь уже щелкал по кубу</i>. Такой сценарий можно легко реализовать с помощью <a href="manual/ru/puzzles/Variables.html">переменной</a> для запоминания, был ли куб когда-либо кликнут:
     </p>
 
     <img src="files/puzzles/puzzles-logic-example.jpg" style="max-width: 1000px">
 
     <p>
-    Sometimes you need to <a href="manual/ru/puzzles/Logic.html#comparison">compare</a> a variable with multiple values, and thus need more branches. In this case, you can expand the *if* puzzle by clicking on the gear icon and dragging out more slots: *elseif* or *else*.
+    Иногда необходимо <a href="manual/ru/puzzles/Logic.html#comparison">сравнить</a> переменную с несколькими значениями, и поэтому требуется больше ветвей. В этом случае вы можете расширить пазл *if*, нажав на значок шестеренки и перетащив дополнительные слоты: *elseif* или *else*.
     </p>
 
     <img src="files/puzzles/puzzles-logic-more-branching.jpg" style="max-width: 900px">
 
     <p>
-    As a result, you'll be able to fill up the newly created slots with any actions you want to happen in your scenario:
+    В результате вы сможете заполнить вновь созданные слоты любыми действиями, которые должны произойти в вашем сценарии:
     </p>
 
     <img src="files/puzzles/puzzles-logic-example4.jpg" style="max-width: 1000px">
@@ -63,19 +63,19 @@
     <h3>comparison</h3>
 
     <p>
-    This puzzle compares two values and outputs a logical value as the result of comparison.
+    Этот пазл сравнивает два значения и выводит логическое значение как результат сравнения.
     </p>
 
     <img src="files/puzzles/puzzles-logic-comparison.jpg" style="max-width: 1000px">
 
     <p>
-    Instead of explicitely using the <a href="manual/ru/puzzles/Logic.html#true_false">true / false</a> values as in the <a href="manual/ru/puzzles/Logic.html#if_else">example above</a>, you can leverage any other puzzles such as *text* to set a value for a variable. In this case, however, you will additionally need the comparison puzzle to be able to check textual values. The result of comparison (*true* or *false*) is then supplied to the <a href="manual/ru/puzzles/Logic.html#if_else">if / else</a> puzzle:
+     Вместо использования значений <a href="manual/ru/puzzles/Logic.html#true_false">true / false</a>, как в <a href="manual/ru/puzzles/Logic.html#if_else">примере выше</a>, вы можете использовать любые другие пазлы, такие как *text*, чтобы задать значение переменной. Однако в этом случае вам дополнительно понадобится пазл сравнения, чтобы иметь возможность проверять текстовые значения. Результат сравнения (*true* или *false*) затем передается в пазл <a href="manual/ru/puzzles/Logic.html#if_else">if / else</a>:
     </p>
 
     <img src="files/puzzles/puzzles-logic-example2.jpg" style="max-width: 1000px">
 
     <p>
-    Here is a more advanced example: hide the sphere only if the user clicked on the cube 3 times:
+      Вот более продвинутый пример: скрыть сферу только в том случае, если пользователь кликнул по кубу 3 раза:
     </p>
 
     <img src="files/puzzles/puzzles-logic-example3.jpg" style="max-width: 1000px">
@@ -87,13 +87,13 @@
     <h3>logical operators AND / OR</h3>
 
     <p>
-    You can further detail your <a href="manual/ru/puzzles/Logic.html#comparison">comparisons</a> by using the logical *AND / OR* operators.
+    Вы можете детализировать ваши <a href="manual/ru/puzzles/Logic.html#comparison">сравнения</a>, используя логические операторы *AND / OR*.
     </p>
 
     <img src="files/puzzles/puzzles-logic-operators-and-or-sample.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-logic-operators-and-or.jpg" style="max-width: 1000px">
@@ -105,13 +105,13 @@
     <h3>logical operator NOT</h3>
 
     <p>
-    You can negate the result of a logical expression (convert *true* to *false* and back) by using the logical operator *NOT*.
+    Вы можете отрицать результат логического выражения (преобразовывать *true* в *false* и обратно) с помощью логического оператора *NOT*.
     </p>
 
     <img src="files/puzzles/puzzles-logic-operator-not-sample.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-logic-operator-not.jpg" style="max-width: 1000px">
@@ -123,13 +123,13 @@
     <h3>true / false</h3>
 
     <p>
-    The logic puzzles operate with only two values, *true* and *false*, also known as Boolean values.
+    Логические пазлы оперируют только двумя значениями, *true* и *false*, также известными как Булевы значения.
     </p>
 
     <img src="files/puzzles/puzzles-logic-true-false.jpg" style="max-width: 1000px">
 
     <p>
-    These values are returned as output by the <a href="manual/ru/puzzles/Logic.html#comparison">comparison</a> puzzle, as well as by the logical operators <a href="manual/ru/puzzles/Logic.html#logical_operators_and_or">AND / OR</a> and <a href="manual/ru/puzzles/Logic.html#logical_operator_not">NOT</a>, and supplied as inputs to the branching puzzles <a href="manual/ru/puzzles/Logic.html#if_else">if / else</a> and <a href="manual/ru/puzzles/Logic.html#test">test</a>.
+    Эти значения выдаются на выходе пазла <a href="manual/ru/puzzles/Logic.html#comparison">сравнения</a>, а также логических операторов <a href="manual/ru/puzzles/Logic.html#logical_operators_and_or">AND / OR</a> и <a href="manual/ru/puzzles/Logic. html#logical_operator_not">NOT</a>, и поставляются в качестве входных данных для разветвленных пазлов<a href="manual/ru/puzzles/Logic.html#if_else">if / else</a> и <a href="manual/ru/puzzles/Logic.html#test">test</a>.
     </p>
 
 
@@ -139,13 +139,13 @@
     <h3>null</h3>
 
     <p>
-    The *null* value, strictly speaking, is not related to logical algebra. If a variable is set to *null*, it means it is not set to *true* or *false*, but rather left "undecided".
+    Значение *null*, строго говоря, не имеет отношения к логической алгебре. Если переменная установлена в *null*, это означает, что она не установлена в *true* или *false*, а скорее оставлена "неопределенной".
     </p>
 
     <img src="files/puzzles/puzzles-logic-null-sample.jpg" style="max-width: 1000px">
 
     <p>
-    You can use *null* to explicitely initialize a newly created variable.
+    Вы можете использовать *null* для инициализации вновь созданной переменной.
     </p>
 
     <img src="files/puzzles/puzzles-logic-null.jpg" style="max-width: 1000px">
@@ -157,21 +157,21 @@
     <h3>test</h3>
 
     <p>
-    Sometimes you can make your puzzles a bit more compact or more convient to use by leveraging the *test* puzzle which returns value right away.
+    Иногда вы можете сделать свои пазлы более компактными или более удобными в использовании, используя пазл *test*, который сразу возвращает значение.
     </p>
 
     <img src="files/puzzles/puzzles-logic-test-sample.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-logic-test.jpg" style="max-width: 1000px">
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблема с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обращайтесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
   </article></body>
 </html>
