--- a/manual/ru/puzzles/Loops.html
+++ b/manual/ru/puzzles/Loops.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Loops Puzzles Reference - Soft8Soft</title>
+    <title>Цикличные Пазлы - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="These puzzles provide means for specifying iterations in your Puzzles scenario."/>
     <base href="../../../" />
@@ -10,31 +10,30 @@
   </head>
   <body><article>
 
-    <h1>Loops</h1>
+    <h1>Циклы</h1>
 
     <p>
-    These puzzles provide means for specifying iterations in your Puzzles scenario.
-    </p>
-
+    Эти пазлы предоставляют средства для задания итераций в вашем сценарии Пазлов.
+   </p>
     <img src="files/puzzles/puzzles-loops.jpg" style="max-width: 1000px">
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:infinite_loops]
 
-    <h2>Infinite Loops Caveat</h2>
+    <h2>Предупреждение о Бесконечных Циклах</h2>
 
     <p>
-      Be careful with these puzzles as it is easy to create infinite loops and hang your browser. If you happened to save such a wrongful scenario, you can restore a previous version of your puzzles from <a href="manual/ru/introduction/Puzzles-Visual-Logic-Editor.html#Backup">backup</a>.
+      Будьте осторожны с этими пазлами, так как легко создать бесконечные циклы и вызвать зависание вашего браузера. Если вы случайно сохранили такой ошибочный сценарий, вы можете восстановить предыдущую версию пазлов из <a href="manual/ru/introduction/Puzzles-Visual-Logic-Editor.html#Backup">резервного хранилища</a>.
     </p>
 
 
     [anchor:puzzles_reference]
 
-    <h2>Puzzles Reference</h2>
+    <h2>Перечень Пазлов</h2>
 
 
     [anchor:repeat]
@@ -42,13 +41,13 @@
     <h3>repeat</h3>
 
     <p>
-    This puzzle runs the puzzles placed in the *do* slot the specified number of times.
+    Этот пазл запускает пазлы, помещенные в слот *do*, указанное количество раз.
     </p>
 
     <img src="files/puzzles/puzzles-loops-repeat.jpg" style="max-width: 1000px">
 
     <p>
-    For example, the following set of puzzles creates several copies of the cube and places them randomly on the scene.
+    Например, следующий набор пазлов создает несколько копий куба и размещает их случайным образом на сцене.
     </p>
 
     <img src="files/puzzles/puzzles-loops-repeat-example.jpg" style="max-width: 1000px">
@@ -60,13 +59,13 @@
     <h3>for each</h3>
 
     <p>
-    This puzzle iterates through a specified list and runs the puzzles placed in the *do* slot for each item in that list. The items for corresponding iteration are accesible via an automatically created <a href='manual/ru/puzzles/Variables.html'>variable</a>.
+    Этот пазл выполняет итерацию по заданному списку и запускает пазлы, помещенные в слот *do* для каждого элемента этого списка. Элементы для соответствующей итерации доступны через автоматически созданную <a href='manual/ru/puzzles/Variables.html'>переменную</a>.
     </p>
 
     <img src="files/puzzles/puzzles-loops-for-each.jpg" style="max-width: 1000px">
 
     <p>
-    For example, the following set of puzzles adds annotations to all objects from the list.
+    Например, следующий набор пазлов добавляет аннотации ко всем объектам из списка.
     </p>
 
     <img src="files/puzzles/puzzles-loops-for-each-example.jpg" style="max-width: 1000px">
@@ -78,13 +77,13 @@
     <h3>count with</h3>
 
     <p>
-    This puzzle is similar to <a href='manual/ru/puzzles/Loops.html#for_each'>for each</a>, except it gives the loop variable values in a numeric sequence.
+    Этот пазл похож на <a href='manual/ru/puzzles/Loops.html#for_each'>for each</a>, за исключением того, что в нем значения переменных цикла даются в числовой последовательности.
     </p>
 
     <img src="files/puzzles/puzzles-loops-count-with.jpg" style="max-width: 1000px">
 
     <p>
-    For example, the following set of puzzles counts from 2 to 10 with the step 2, thus creating numbers 2, 4, 6, 8 and 10, clones the cube on each step, and uses those numbers to position the copies along X axis.
+    Например, следующий набор пазлов считает от 2 до 10 с шагом 2, создавая таким образом числа 2, 4, 6, 8 и 10, клонирует куб на каждом шаге и использует эти числа для расположения копий вдоль оси X.
     </p>
 
     <img src="files/puzzles/puzzles-loops-count-with-example.jpg" style="max-width: 1000px">
@@ -96,19 +95,19 @@
     <h3>repeat while / until</h3>
 
     <p>
-    The *repeat while* puzzle runs the puzzles placed in the *do* slot as long as a specified logical <a href='manual/ru/puzzles/Logic.html#comparison'>condition</a> is true. On the contrary, the *repeat until* puzzle stops running just after a specified logical condition evaluates to false.
+    Пазл *repeat while* запускает пазлы, помещенные в слот *do*, до тех пор, пока указанное логическое <a href='manual/ru/puzzles/Logic.html#comparison'>условие</a> истинно. Напротив, пазл *repeat until* прекращает выполнение сразу после того, как указанное логическое условие становится ложным.
     </p>
 
     <img src="files/puzzles/puzzles-loops-repeat-while-until.jpg" style="max-width: 1000px">
 
     <p>
-    This puzzle is well suited for situations when something is changing inside the loop and this affects your decision to continue or stop performing the iterations. For example, the following set of puzzles, which uses the *repeat while* variant, keeps asking for the user's answer as long as the user answers "yes".
+      Этот пазл хорошо подходит для ситуаций, когда внутри цикла что-то меняется, и это влияет на ваше решение продолжать или прекратить выполнение итераций. Например, следующий набор пазлов, использующий вариант *repeat while*, продолжает запрашивать ответ пользователя до тех пор, пока пользователь отвечает "да".
     </p>
 
     <img src="files/puzzles/puzzles-loops-repeat-while-example.jpg" style="max-width: 1000px">
 
     <p>
-    You can use the *repeat until* variant to ask the same question but in a slightly more annoying manner, making the answer "no" the only option to stop this.
+    Вы можете использовать вариант *repeat until*, чтобы задать тот же вопрос, но в несколько более раздражающей манере, делая ответ "нет" единственной возможностью прекратить это.
     </p>
 
     <img src="files/puzzles/puzzles-loops-repeat-until-example.jpg" style="max-width: 1000px">
@@ -120,27 +119,27 @@
     <h3>break / continue</h3>
 
     <p>
-    Most loops run until the terminating condition (in the case of *repeat* puzzles) is met or until all values have been taken by the loop variable (in the case of *count with* and *for each* puzzles). This puzzle provide additional means for controlling loop behavior. Although the below examples use the *for each* puzzle, they can be used with any type of loop.
+    Большинство циклов выполняется до тех пор, пока не будет выполнено условие завершения (в случае пазлов *repeat*) или пока все значения не будут приняты переменной цикла (в случае пазлов *count with* и *for each*). Этот пазл предоставляет дополнительные средства для управления поведением цикла. Хотя в приведенных ниже примерах используется пазл *for each*, они могут быть использованы с любым типом цикла.
     </p>
 
     <img src="files/puzzles/puzzles-loops-break-continue.jpg" style="max-width: 1000px">
 
     <p>
-    The *break* variant provides an early exit. For example, the following set of puzzles performs search for an object named "Cube". Once it is found and the result variable is set, there is no need to iterate any further, and as such we break out of the loop.
+    Вариант *break* обеспечивает ранний выход. Например, в следующем наборе пазлов выполняется поиск объекта с именем "Cube". Как только он найден и переменная result установлена, дальнейшая итерация не требуется, и поэтому мы выходим из цикла.
     </p>
 
     <img src="files/puzzles/puzzles-loops-break-example.jpg" style="max-width: 1000px">
 
     <p>
-    On the other hand, the *continue* variant skips the current iteration so that the next iteration of the loop begins. For example, the following set of puzzles adds annotations to all objects on the scene except "Cube".
+    С другой стороны, вариант *continue* пропускает текущую итерацию, чтобы началась следующая итерация цикла. Например, следующий набор пазлов добавляет аннотации ко всем объектам на сцене, кроме "Cube".
     </p>
 
     <img src="files/puzzles/puzzles-loops-continue-example.jpg" style="max-width: 1000px">
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблема с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обращайтесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
 
   </article></body>
