--- a/manual/ru/puzzles/Misc.html
+++ b/manual/ru/puzzles/Misc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Misc Puzzles Reference - Soft8Soft</title>
+    <title>Прочие Пазлы - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="How to use misc puzzles to perform various operations in your 3D applications."/>
     <base href="../../../" />
@@ -12,23 +12,23 @@
 
     <!-- Deprecated since 3.3 -->
 
-    <h1>Miscellaneous Puzzles</h1>
+    <h1>Прочие Пазлы</h1>
 
     <p>
-    Miscellaneous puzzles to perform various operations on a high level.
+      Прочие пазлы для выполнения различных операций на высоком уровне.
     </p>
 
     <img src="files/puzzles/puzzles-misc.jpg">
 
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:puzzles_reference]
 
-    <h2>Puzzles Reference</h2>
+    <h2>Перечень Пазлов</h2>
 
 
     [anchor:open_web_page]
@@ -36,7 +36,7 @@
     <h3>open web page</h3>
 
     <p>
-    When this puzzle is triggered, a specified URL is opened in a new or in the same browser tab depending on the drop-down selection. When triggered from the Puzzles editor, it will ask for a user confirmation before leaving the tab.
+      При срабатывании этого пазла указанный URL открывается в новой или в той же вкладке браузера в зависимости от выпадающего выбора. При запуске из редактора пазлов он запросит подтверждение пользователя, прежде чем покинуть вкладку.
     </p>
 
     <img src="files/puzzles/puzzles-misc-open-web-page.jpg">
@@ -48,7 +48,7 @@
     <h3>social share link</h3>
 
     <p>
-    Generates a link for sharing your application in popular social media.
+      Генерирует ссылку для обмена вашим приложением в популярных социальных сетях.
     </p>
 
     <img src="files/puzzles/puzzles-misc-social-share-link.jpg">
@@ -60,13 +60,13 @@
     <h3>call JS function</h3>
 
     <p>
-    Executes a function specified in the JavaScript code of the application. Optionally passes parameters to be used as function arguments.
+      Выполняет функцию, указанную в JavaScript-коде приложения. По желанию передает параметры для использования в качестве аргументов функции.
     </p>
 
     <img src="files/puzzles/puzzles-misc-call-js-function.jpg">
 
     <p>
-    In order to add a function to JavaScript code, open the application <strong>.js</strong> file (for example, <i>my_awesome_app.js</i> located in <i>verge3d/applications/my_awesome_app</i>) with any text editor. Search for "prepareExternalInterface" and add your function inside that declaration (between the curly brackets), so that it looks like this:
+      Для того чтобы добавить функцию в код JavaScript, откройте файл приложения <strong>.js</strong> (например, <i>my_awesome_app.js</i>, расположенный в <i>verge3d/applications/my_awesome_app</i>) любым текстовым редактором. Найдите "prepareExternalInterface" и добавьте свою функцию внутрь этого объявления (между фигурными скобками), чтобы она выглядела следующим образом:
     </p>
 
     <code>
@@ -84,8 +84,7 @@ function prepareExternalInterface(app) {
     <h3>when called from JS</h3>
 
     <p>
-      <span style="color:#f00">Deprecated.</span> Use the *v3d.puzzles.procedures*
-        object to directly call a procedure defined in Puzzles:
+      <span style="color:#f00">Исправлено.</span> Используйте объект *v3d.puzzles.procedures* для прямого вызова процедуры, определенной в Puzzles:
       <code>
 function runCode(app) {
         v3d.puzzles.procedures['myProcedure']();
@@ -100,7 +99,7 @@ function runCode(app) {
     <h3>load data</h3>
 
     <p>
-    Attempts to load data from a specified location. The puzzles in the "once ready do" slot are interpreted regardless of whether the attempt was a success. The retrieved data can be accessed via the <a href="manual/ru/puzzles/Misc.html#loaded_data">loaded data</a> puzzle.
+      Попытка загрузить данные из указанного места. Пазлы в слоте "once ready do" интерпретируются независимо от того, была ли попытка успешной. Доступ к полученным данным можно получить с помощью пазла <a href="manual/ru/puzzles/Misc.html#loaded_data">loaded data</a>.
     </p>
 
     <img src="files/puzzles/puzzles-misc-load-data.jpg">
@@ -112,7 +111,7 @@ function runCode(app) {
     <h3>send data</h3>
 
     <p>
-    Attempts to send a specified data to a remote location using an asynchronous <a href="https://en.wikipedia.org/wiki/POST_(HTTP)" target="_blank">POST HTTP</a> request. The puzzles in the "once ready do" slot are interpreted regardless of whether the attempt was a success. If there is any response data, it can be accessed via the <a href="manual/ru/puzzles/Misc.html#loaded_data">loaded data</a> puzzle.
+      Попытка отправить указанные данные в удаленное место с помощью асинхронного <a href="https://en.wikipedia.org/wiki/POST_(HTTP)" target="_blank">POST HTTP</a> запроса. Пазлы в слоте "once ready do" интерпретируются независимо от того, была ли попытка успешной. Если есть какие-либо ответные данные, к ним можно получить доступ через пазл <a href="manual/ru/puzzles/Misc.html#loaded_data">loaded data</a>.
     </p>
 
 
@@ -126,7 +125,7 @@ function runCode(app) {
     <h3>loaded data</h3>
 
     <p>
-    Returns data retrieved by the <a href="manual/ru/puzzles/Misc.html#load_data">load data</a> or <a href="manual/ru/puzzles/Misc.html#send_data">send data</a> puzzles.
+      Возвращает данные, полученные с помощью пазлов <a href="manual/ru/puzzles/Misc.html#load_data">load data</a> или <a href="manual/ru/puzzles/Misc.html#send_data">send data</a>.
     </p>
 
     <img src="files/puzzles/puzzles-misc-loaded-data.jpg">
@@ -138,7 +137,7 @@ function runCode(app) {
     <h3>read JSON</h3>
 
     <p>
-    Interprets text as <a href="https://en.wikipedia.org/wiki/JSON#Example" target="_blank">JavaScript Object Notation</a> data which are returned in a dictionary.
+      Интерпретирует текст как данные <a href="https://en.wikipedia.org/wiki/JSON#Example" target="_blank">JavaScript Object Notation</a>, которые возвращаются в словарь.
     </p>
 
     <img src="files/puzzles/puzzles-misc-read-JSON.jpg">
@@ -150,13 +149,13 @@ function runCode(app) {
     <h3>read CSV</h3>
 
     <p>
-    Interprets text as <a href="https://en.wikipedia.org/wiki/Comma-separated_values#Example" target="_blank">comma-separated values</a>. Returns a list of table rows, with each row represented as a list of values. The delimiter can be selected with the drop-down to correspond a CSV file's export settings. "From row" value denotes how many rows will be skipped starting from the top.
+      Интерпретирует текст как <a href="https://en.wikipedia.org/wiki/Comma-separated_values#Example" target="_blank">comma-separated values</a>. Возвращает список строк таблицы, где каждая строка представлена как список значений. Разделитель может быть выбран с помощью выпадающего списка в соответствии с настройками экспорта CSV-файла. Значение "From row" указывает, сколько строк будет пропущено, начиная с верхней. 
     </p>
 
     <img src="files/puzzles/puzzles-misc-read-CSV.jpg">
 
     <p>
-    Table rows and values are accessed by their numeric indices starting from 0.
+      Доступ к строкам и значениям таблицы осуществляется по их числовым индексам, начиная с 0.
     </p>
 
     <img src="files/puzzles/puzzles-misc-csv-example.jpg">
@@ -168,13 +167,13 @@ function runCode(app) {
     <h3>save state</h3>
 
     <p>
-    Saves the state of specified objects and/or the values of variables specified by their names. The objects are cloned and stored in memory. The values of the variables are retrieved and stored in memory for each specified variable name.
+      Сохраняет состояние указанных объектов и/или значения переменных, заданных их именами. Объекты клонируются и сохраняются в памяти. Значения переменных извлекаются и сохраняются в памяти для каждого указанного имени переменной.
     </p>
 
     <img src="files/puzzles/puzzles-misc-save-state.jpg">
 
     <p>
-    If this puzzle is called several times, the states are saved in sequence so that it is possible to return to any previous state with the <a href="manual/ru/puzzles/Misc.html#undo_state">undo state</a> puzzle.
+      Если этот пазл вызывается несколько раз, состояния сохраняются в последовательности, чтобы можно было вернуться к любому предыдущему состоянию с помощью пазла <a href="manual/ru/puzzles/Misc.html#undo_state">undo state</a>.
     </p>
 
 
@@ -184,13 +183,13 @@ function runCode(app) {
     <h3>undo state</h3>
 
     <p>
-    Restores the state of objects and/or variables saved with the <a href="manual/ru/puzzles/Misc.html#save_state">save state</a> puzzle.
+      Восстанавливает состояние объектов и/или переменных, сохраненных с помощью пазла <a href="manual/ru/puzzles/Misc.html#save_state">save state</a>.
     </p>
 
     <img src="files/puzzles/puzzles-misc-undo-state.jpg">
 
     <p>
-    If this puzzle is called several times, the states are restored from the saved sequence (if any) which makes it possible to return to any previously saved state from the stack.
+      Если этот пазл вызывается несколько раз, состояния восстанавливаются из сохраненной последовательности (если таковая имеется), что позволяет вернуться к любому ранее сохраненному состоянию из стека.
     </p>
 
 
@@ -200,7 +199,7 @@ function runCode(app) {
     <h3>all variable names</h3>
 
     <p>
-    Returns a list with the names of all variables used in Puzzles.
+      Возвращает список с именами всех переменных, используемых в пазлах. 
     </p>
 
     <img src="files/puzzles/puzzles-misc-all-variable-names.jpg">
@@ -212,15 +211,15 @@ function runCode(app) {
     <h3>variable value by name</h3>
 
     <p>
-    Returns the value of a variable specified by its name. This puzzle works similarly to the standard variable value puzzle, yet does not require to select a variable from the predefined dropdown menu.
+      Возвращает значение переменной, заданной ее именем. Этот пазл работает аналогично стандартному пазлу variable value, но не требует выбора переменной из предопределенного выпадающего меню.
     </p>
 
     <img src="files/puzzles/puzzles-misc-variable-value-by-name.jpg">
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблемы с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обратитесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
   </article></body>
 </html>
