--- a/manual/ru/puzzles/Procedures.html
+++ b/manual/ru/puzzles/Procedures.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Procedures Puzzles Reference - Soft8Soft</title>
+    <title>Процедурные Пазлы - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Procedure (aka function) is a named group of puzzles that performs a specific task. By organizing your puzzles in procedures you can make your scenarios more compact and maintainable."/>
     <base href="../../../" />
@@ -9,10 +9,10 @@
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body><article>
-    <h1>Procedures</h1>
+    <h1>Процедуры</h1>
 
     <p>
-    Procedure (aka function) is a named group of puzzles that performs a specific task. By organizing your puzzles in procedures you can make your scenarios more compact and maintainable.
+      Процедура (она же функция) - это именованная группа пазлов, которая выполняет определенную задачу. Организуя пазлы в процедуры, вы можете сделать свои сценарии более компактными и удобными для использования.
     </p>
 
     [contents]
@@ -20,16 +20,16 @@
 
     [anchor:creating_procedures]
 
-    <h2>Creating Procedures</h2>
+    <h2>Создание Процедур</h2>
 
     <p>
-    A new procedure can be created by dragging out the procedure definition puzzle from the toolbox:
+      Новая процедура может быть создана путем перетаскивания пазла определения процедуры из панели инструментов:
     </p>
 
     <img src="files/puzzles/puzzles-procedures-create.jpg">
 
     <p>
-    A newly created procedure puzzle can be renamed and filled up with other puzzles to perform some task:
+      Созданный процедурный пазл может быть переименован, и заполнен другими пазлами для выполнения какой-либо задачи:
     </p>
 
     <img src="files/puzzles/puzzles-procedures-create2.jpg">
@@ -37,46 +37,46 @@
 
     [anchor:calling_procedures]
 
-    <h2>Calling Procedures</h2>
+    <h2>Вызов Процедуры</h2>
 
     <p>
-    To be able to trigger (to call) a procedure, drag out the corresponding puzzle from the toolbox:
+    Чтобы иметь возможность запустить (вызвать) процедуру, перетащите соответствующий пазл из панели инструментов:
     </p>
 
     <img src="files/puzzles/puzzles-procedures-trigger.jpg">
 
     <p>
-    A procedure can be triggered several times and from several places of a Puzzles scenario. This may allow for re-using puzzles rather than straight-copying similar set of puzzles several times. For example, an animation can be launched whenever the user clicks the object itself or an HTML button (thus securing duplicate controls).
+    Процедура может быть запущена несколько раз и из нескольких мест сценария Пазлов. Это может позволить повторно использовать пазлы, а не копировать аналогичный набор пазлов несколько раз. Например, анимация может запускаться всякий раз, когда пользователь нажимает на сам объект или кнопку HTML (таким образом обеспечивается дублирование элементов управления).
     </p>
 
     <img src="files/puzzles/puzzles-procedures-trigger2.jpg">
 
     <p>
-    A procedure may have additional input parameters (aka arguments). To add an input to your procedure, click the gear icon and drag out a parameter puzzle from the toolbox on the left, sticking it in the inputs puzzle:
+    Процедура может иметь дополнительные вводные параметры (они же аргументы). Чтобы добавить параметр в процедуру, нажмите на значок шестеренки и перетащите пазл параметров из панели инструментов слева, вставив его в пазл вводных параметров:
     </p>
 
     <img src="files/puzzles/puzzles-procedures-inputs.jpg">
 
     <p>
-    To be able to use an input parameter inside a procedure, drag out the corresponding "get" variable puzzle created automatically in "Variables":
+      Чтобы иметь возможность использовать вводный параметр внутри процедуры, вытащите соответствующий пазл переменной "get", созданный автоматически в "Variables":
     </p>
 
     <img src="files/puzzles/puzzles-procedures-inputs2.jpg">
 
     <p>
-    This variable can be used as a substitute for actual data (such as object names) to perform some task with.
+    Эта переменная может быть использована в качестве замены фактических данных (например, имен объектов) для выполнения какой-либо задачи.
     </p>
 
     <img src="files/puzzles/puzzles-procedures-inputs3.jpg">
 
     <p>
-    When triggering a procedure with inputs, provide the data for each trigger puzzle.
+    При запуске процедуры с помощью вводных параметров укажите данные для каждого триггерного пазла.
     </p>
 
     <img src="files/puzzles/puzzles-procedures-trigger-with-inputs.jpg">
 
     <p>
-    You can jump from a trigger puzzle to the corresponding procedure definition puzzle using the right-click menu:
+    Вы можете перейти от триггерного пазла к соответствующему пазлу определения процедуры с помощью меню правой кнопки мыши:
     </p>
 
     <img src="files/puzzles/puzzles-procedures-jump.jpg">
@@ -84,10 +84,10 @@
 
     [anchor:procedure_with_return]
 
-    <h2>Procedures with Return Value</h2>
+    <h2>Процедуры с Возвращаемым Значением</h2>
 
     <p>
-    A procedure may output a computed value to its caller (aka return value). To create such a procedure, from the toolbox drag out the variant of the procedure puzzle with the return slot.
+    Процедура может выдавать своему пользователю вычисленное значение (оно же возвращаемое значение). Чтобы создать такую процедуру, из панели инструментов перетащите вариант процедурного пазла со слотом возврата.
     </p>
 
     <img src="files/puzzles/puzzles-procedures-return.jpg">
@@ -95,10 +95,10 @@
 
     [anchor:if_return]
 
-    <h2>Using "if return" Puzzle</h2>
+    <h2>Использование Пазла "if return"</h2>
 
     <p>
-    A procedure may return a value upon some condition before all inside puzzles are interpreted. In this case the procedure stops running prematurely.
+    Процедура может вернуть значение при некотором условии до того, как все внутренние пазлы будут обработаны. В этом случае процедура преждевременно прекращает выполнение.
     </p>
 
     <img src="files/puzzles/puzzles-procedures-if-return.jpg">
@@ -106,10 +106,10 @@
 
     [anchor:calling_procedures_javascript]
 
-    <h2>Calling Procedures from JavaScript</h2>
+    <h2>Вызов Процедур из JavaScript</h2>
 
     <p>
-      To execute Puzzles procedures from the external JavaScript code, use the <strong>v3d.puzzles.procedures</strong> namespace:
+      Чтобы задействовать процедурные пазлы из внешнего кода JavaScript, используйте диапазон имен <strong>v3d.puzzles.procedures</strong> :
     </p>
 
     <code>
@@ -117,9 +117,9 @@
     </code>
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблема с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обращайтесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
 
   </article></body>
