--- a/manual/ru/puzzles/Selectors.html
+++ b/manual/ru/puzzles/Selectors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Selectors Puzzles Reference - Soft8Soft</title>
+    <title>Перечень Селекторов - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="How to use Verge3D Puzzles to select 3D objects, groups, animation clips and materials."/>
     <base href="../../../" />
@@ -9,23 +9,23 @@
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body><article>
-    <h1>Selectors</h1>
+    <h1>Селекторы</h1>
 
     <p>
-    The puzzles from this category are used to select 3D objects, groups, animation clips and materials to fit in other puzzles.
+      Пазлы из этой категории используются для выбора 3D-объектов, групп, анимационных клипов и материалов для вставки в другие пазлы.
     </p>
 
     <img src="files/puzzles/puzzles-selectors.jpg">
 
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:puzzles_reference]
 
-    <h2>Puzzles Reference</h2>
+    <h2>Перечень Пазлов</h2>
 
 
     [anchor:select_object]
@@ -33,7 +33,7 @@
     <h3>select object</h3>
 
     <p>
-    The drop-down contains an alphabetized list of all objects on the scene.
+    Выпадающий список, содержит алфавитный список всех объектов в сцене.
     </p>
 
     <img src="files/puzzles/puzzles-selector-object.jpg">
@@ -44,7 +44,7 @@
     <h3>all objects</h3>
 
     <p>
-    Denotes all objects on the scene so that an operation can be applied to them in bulk. Not iterable.
+    Обозначает все объекты в сцене, чтобы операция могла быть применена к ним в массовом порядке. Не итерируемый.
     </p>
 
     <img src="files/puzzles/puzzles-selector-all-objects.jpg">
@@ -55,7 +55,7 @@
     <h3>select group</h3>
 
     <p>
-    The drop-down contains an alphabetized list of all object groups presented in the scene. An operation can be applied to a group of objects in bulk. Not iterable.
+    Выпадающий список содержит алфавитный список всех групп объектов, представленных в сцене. Операция может быть применена к группе объектов в большом количестве. Не итерируемая.
     </p>
 
     <img src="files/puzzles/puzzles-selector-group.jpg">
@@ -66,7 +66,7 @@
     <h3>select animation</h3>
 
     <p>
-    The drop-down contains an alphabetized list of all animation clips presented in the scene. An animation clip is named according to the object to which animation is applied in Blender, 3ds Max or Maya.
+    Выпадающий список содержит алфавитный список всех анимационных клипов, представленных в сцене. Клип анимации называется в соответствии с объектом, к которому применяется анимация в Blender, 3ds Max или Maya.
     </p>
 
     <img src="files/puzzles/puzzles-selector-animation.jpg">
@@ -77,15 +77,15 @@
     <h3>select material</h3>
 
     <p>
-    The drop-down contains an alphabetized list of all materials that are present in the scene.
+    Выпадающий список содержит алфавитный список всех материалов, которые присутствуют в сцене.
     </p>
 
     <img src="files/puzzles/puzzles-selector-material.jpg">
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблема с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обращайтесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
 
   </article></body>
