--- a/manual/ru/puzzles/System.html
+++ b/manual/ru/puzzles/System.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>System Puzzles Reference - Soft8Soft</title>
+    <title>Системные Пазлы - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="These puzzles may be used to retrieve and print values of variables, measure the performance, and retrieve the GPU information."/>
     <base href="../../../" />
@@ -10,22 +10,22 @@
   </head>
   <body><article>
 
-    <h1>System Puzzles</h1>
+    <h1>Системные Пазлы</h1>
 
     <p>
-    These puzzles may be used to perform various system functions such as printing to console, measuring performance, getting/setting rendered pixel ratio and retrieving the GPU information.
+    Эти пазлы могут использоваться для выполнения различных системных функций, таких как вывод в консоль, измерение производительности, получение/установка соотношения пикселей рендеринга и получение информации о GPU.
     </p>
 
     <img src="files/puzzles/puzzles-system.jpg">
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:puzzles_reference]
 
-    <h2>Puzzles Reference</h2>
+    <h2>Перечень Пазлов</h2>
 
 
     [anchor:print_to_console]
@@ -33,7 +33,7 @@
     <h3>print to console</h3>
 
     <p>
-      Prints data of any type (an output from some puzzle, a variable, or just a text) to the browser <a href="manual/ru/introduction/FAQ.html#browser_console">console</a>. Printing to console is the most universal and easy-to-use method to debug your scripts.
+    Выводит данные любого типа (вывод из какого-либо пазла, переменную или просто текст) в браузерную <a href="manual/ru/introduction/FAQ.html#browser_console">консоль</a>. Вывод в консоль является наиболее универсальным и простым в использовании методом отладки ваших скриптов.
     </p>
 
     <img src="files/puzzles/puzzles-system-print-console.jpg">
@@ -44,7 +44,7 @@
     <h3>print performance info</h3>
 
     <p>
-    Records a performance profile during 1 second and prints it to the browser <a href="manual/ru/introduction/FAQ.html#browser_console">console</a>. Use this profile to find performance bottlenecks and improve application rendering and loading speed. See more <a href="manual/ru/introduction/Performance-Bottlenecks.html#performance_profile">here</a>.
+    Записывает профиль производительности в течение 1 секунды и выводит его в браузерную <a href="manual/ru/introduction/FAQ.html#browser_console">консоль</a>. Используйте этот профиль для поиска слабых мест в производительности и улучшения скорости рендеринга и загрузки приложений. Подробнее <a href="manual/ru/introduction/Performance-Bottlenecks.html#performance_profile">здесь</a>.
     </p>
 
     <img src="files/puzzles/puzzles-system-print-performance-info.jpg">
@@ -55,7 +55,7 @@
     <h3>feature available</h3>
 
     <p>
-    Check if a feature selected from the drop-down is available in the user's browser.
+    Проверяет, доступна ли функция, выбранная из выпадающего списка, в браузере пользователя.
     </p>
 
     <img src="files/puzzles/puzzles-system-feature-available.jpg">
@@ -66,7 +66,7 @@
     <h3>get GPU</h3>
 
     <p>
-    Outputs the user's GPU info - vendor, for example: NVIDIA Corporation, Apple Inc., Qualcomm, and GPU model, for example: GeForce GTX 1060 3GB/PCIe/SSE2, Apple A9 GPU, Adreno (TM) 330.
+    Выводит информацию о GPU пользователя - производитель, например: NVIDIA Corporation, Apple Inc., Qualcomm, и модель GPU, например: GeForce GTX 1060 3GB/PCIe/SSE2, Apple A9 GPU, Adreno (TM) 330.
     </p>
 
     <img src="files/puzzles/puzzles-system-get-GPU.jpg">
@@ -77,12 +77,12 @@
     <h3>set screen scale</h3>
 
     <p>
-      Set screen resolution factor for the rendered canvas. Set &gt; 1 to improve quality, &lt; 1 to improve performance. 1 is the default screen scale on both retina (aka HiDPI) and non-retina displays.
+    Установливает коэффициент разрешения экрана для отрендеренного canvas. Установите &gt; 1 для улучшения качества, &lt; 1 для улучшения производительности. 1 - это масштаб экрана по умолчанию как на дисплеях retina (они же HiDPI), так и на дисплеях non-retina.
     </p>
 
     <img src="files/puzzles/puzzles-system-set-screen-scale.jpg">
 
-    <p class="note">To prevent rendering of too much pixels on retina displays, Verge3D uses 1 as default scale factor. If performance is not a concern, enable retina rendering by setting screen scale to native screen scale.</p>
+    <p class="note">Чтобы предотвратить рендеринг слишком большого количества пикселей на дисплеях retina, Verge3D использует коэффициент масштабирования по умолчанию 1. Если производительность не вызывает беспокойства, включите рендеринг retina, установив масштаб экрана на "родной".</p>
 
 
     [anchor:native_screen_scale]
@@ -90,7 +90,7 @@
     <h3>native screen scale</h3>
 
     <p>
-      Native (depends on hardware or browser zooming) canvas resolution factor. If you don't <em>zoom in</em> or <em>zoom out</em> your page, this value equals to 1 for non-retina displays, &gt; 1 for HiDPI displays, modern smartphones and tablets.
+      Нативный (зависит от аппаратного обеспечения или масштаба браузера) коэффициент разрешения canvas. Если вы не <em>увеличиваете</em> или не <em>уменьшаете</em> вашу страницу, это значение равно 1 для не retina-дисплеев, &gt; 1 для HiDPI-дисплеев, современных смартфонов и планшетов.
     </p>
 
     <img src="files/puzzles/puzzles-system-native-screen-scale.jpg">
@@ -101,7 +101,7 @@
     <h3>detect gamepad device</h3>
 
     <p>
-      Detect gamepad devices connected to or disconnected from your system. When a new gamepad device found, the puzzles specified in the "once connected do" slot are triggered. When the device disconnected, the puzzles specified in the "once disconnected do" slot are triggered. In any case the value "gamepad index" is set and returns the device index.
+      Обнаружение геймпадов, подключенных к системе или отключенных от нее. При обнаружении нового устройства геймпада срабатывают пазлы, указанные в слоте "once connected do". При отключении устройства срабатывают пазлы, указанные в слоте "once disconnected do". В любом случае значение "gamepad index" устанавливает и возвращает индекс устройства.
     </p>
 
     <img src="files/puzzles/puzzles-system-detect-gamepad.jpg">
@@ -112,7 +112,7 @@
     <h3>gamepad index</h3>
 
     <p>
-      Returns connected/disconnected gamepad device index.
+      Возвращает индекс подключенного/отключенного устройства геймпада.
     </p>
 
 
@@ -121,31 +121,31 @@
     <h3>get gamepad property</h3>
 
     <p>
-      Returns a gamepad property for the device with the given index.
+      Возвращает свойство геймпада для устройства с заданным индексом.
     </p>
 
     <img src="files/puzzles/puzzles-system-get-gamepad-prop.jpg" style="max-width: 951px">
 
-    <p>Properties:</p>
+    <p>Свойства:</p>
 
     <ul>
-      <li>*connection status* — whether the device is connected (returns <em>true</em>) or disconnected (returns <em>false</em>).</li>
-      <li>*axis* — device axis position in the range <em>-1.0–1.0</em>. For example, an analog thumb stick found on all recent gamepads is represented by two axes: left–right and up–down.</li>
-      <li>*button* — device button state. Returns <em>true</em> when the button is pressed and <em>false</em> otherwise.</li>
-      <li>*analog button* — analog button state. Similar to button but can detect the amount which the button has been pressed. Returns value in the range <em>0–1</em>.</li>
-      <li>*id* — device ID string. Identifies the brand and model of the connected device.</li>
-      <li>*timestamp* — last time the axes/buttons for the gamepad were updated. You can store this value in a variable and compare with the current timestamp each frame to detect that some axis/angle was changed.</li>
-      <li>*debug info* — output string with debugging information. Print this info with <a href="manual/ru/puzzles/System.html#print_to_console">print to console</a> puzzle to learn what buttons or sticks are available on the connected gamepad device.</li>
+      <li>*connection status* — подключено ли устройство (выдает <em>true</em>) или отключено (выдает <em>false</em>).</li>
+      <li>*axis* — положение оси устройства в диапазоне <em>-1.0–1.0</em>. Например аналоговый стик для большого пальца, встречающийся на всех последних моделях геймпадов, представлен двумя осями: влево-вправо и вверх-вниз.</li>
+      <li>*button* — состояние кнопок устройства. выдает <em>true</em> когда кнопка нажата, в противном случае <em>false</em> .</li>
+      <li>*analog button* — состояние аналоговых кнопок. Аналогичен "button", но может определять количество нажатий на кнопку. Выдает значение в диапазоне <em>0–1</em>.</li>
+      <li>*id* — строка идентификатора устройства. Определяет марку и модель подключенного устройства.</li>
+      <li>*timestamp* — последний раз, когда были обновлены axis/buttons геймпада. Вы можете хранить это значение в переменной и сравнивать с текущей меткой времени каждый кадр, чтобы определить, что какая-то ось/угол были изменены.</li>
+      <li>*debug info* — выходная строка с отладочной информацией. Выведите эту информацию с помощью пазла <a href="manual/ru/puzzles/System.html#print_to_console">print to console</a> , чтобы узнать, какие кнопки или стики доступны на подключенном устройстве геймпада.</li>
     </ul>
 
-    <p>To assign axes buttons in your application use the <a href="https://www.soft8soft.com/gamepad_diagnostics/gamepad_diagnostics.html" target="_blank">Gamepad Diagnostics</a> tool, *debug info* property or follow the Standard Gamepad layout (does not work properly for all kinds of devices):</p>
+    <p>Для назначения кнопок осей в вашем приложении используйте инструмент <a href="https://www.soft8soft.com/gamepad_diagnostics/gamepad_diagnostics.html" target="_blank">Диагностика Геймпада</a>, свойство *debug info* или следуйте стандартной раскладке геймпада (работает не для всех типов устройств):</p>
 
     <img src="files/puzzles/standard-gamepad.svg">
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблема с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обращайтесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
 
   </article></body>
