--- a/manual/ru/puzzles/Text.html
+++ b/manual/ru/puzzles/Text.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Text Puzzles Reference - Soft8Soft</title>
+    <title>Пазлы Текста - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Text puzzles provide means for various operations with text in your Puzzles scenario."/>
     <base href="../../../" />
@@ -10,22 +10,22 @@
   </head>
   <body><article>
 
-    <h1>Text Puzzles</h1>
+    <h1>Пазлы Текста</h1>
 
     <p>
-    Text puzzles provide means for various operations with text in your Puzzles scenario.
+     Текстовые пазлы предоставляют средства для различных операций с текстом в вашем сценарии Пазла.
     </p>
 
     <img src="files/puzzles/puzzles-text.jpg" style="max-width: 1000px">
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:puzzles_reference]
 
-    <h2>Puzzles Reference</h2>
+    <h2>Описание Пазлов</h2>
 
 
     [anchor:text]
@@ -33,25 +33,25 @@
     <h3>text</h3>
 
     <p>
-    This universally used puzzle provides the means to supply some text (a character, word or line) to your Puzzles scenario.
+      Этот универсальный пазл предоставляет средства для добавления текста (символа, слова или строки) в сценарий ваших Пазлов.
     </p>
 
     <img src="files/puzzles/puzzles-text-text.jpg" style="max-width: 1000px">
 
     <p>
-    The text puzzle is often used with puzzles from different categories. Particularly, you can specify URL inputs to <a href='manual/ru/puzzles/Scenes.html'>scene loader puzzles</a>, HTML element ids, CSS rules and colors to <a href='manual/ru/puzzles/HTML.html'>HTML puzzles</a>, and ids and URLs to some other puzzles.
+      Текстовый пазл часто используется с пазлами из разных категорий. В частности, вы можете указать URL для пазла <a href='manual/ru/puzzles/Scenes.html'>загрузчика сцен</a>, идентификаторы элементов HTML, правила CSS и цвета для <a href='manual/ru/puzzles/HTML.html'>HTML пазлов</a>, а также идентификаторы и URL для некоторых других пазлов.
     </p>
 
     <img src="files/puzzles/puzzles-text-text-example2.jpg" style="max-width: 1000px">
 
     <p>
-    This puzzle can also be used to provide names for objects, materials, animations or groups instead of the relevant <a href='manual/ru/puzzles/Selectors.html'>selector puzzles</a>, which may come in handy for dynamically loaded content.
+      Этот пазл также может быть использован для присвоения имен объектам, материалам, анимации или группам вместо соответствующих <a href='manual/ru/puzzles/Selectors.html'>пазлов-селекторов</a>, что может пригодиться для динамически загружаемого контента.
     </p>
 
     <img src="files/puzzles/puzzles-text-text-example.jpg" style="max-width: 1000px">
 
     <p>
-    Finally, some puzzles are configurable to provide textual input instead of the default dropdown menu which is also useful in the case of dynamically loaded scenes.
+      Наконец, некоторые пазлы можно настроить на текстовый ввод вместо выпадающего меню по умолчанию, что также полезно в случае динамически загружаемых сцен.
     </p>
 
     <img src="files/puzzles/puzzles-text-text-example3.jpg" style="max-width: 1000px">
@@ -62,15 +62,11 @@
     <h3>text multi-line</h3>
 
     <p>
-        This puzzle provides the means to supply some text to your Puzzles
-        scenario. The puzzle uses <a href='https://ace.c9.io/'>Ace Editor</a>
-        for displaying and editing the content. See the relevant keyboard
-        shortcuts here: <a href='https://github.com/ajaxorg/ace/wiki/Default-Keyboard-Shortcuts'>Default Keyboard Shortcuts</a>.
+      Этот пазл предоставляет средства для добавления текста в ваш сценарий Пазлов. Пазл использует <a href='https://ace.c9.io/'>Ace Editor</a> для отображения и редактирования контента. См. соответствующие сочетания клавиш здесь <a href='https://github.com/ajaxorg/ace/wiki/Default-Keyboard-Shortcuts'>Default Keyboard Shortcuts</a>.
     </p>
 
     <p>
-        The puzzle supports CSS, HTML, Javascript and plain text highlighting
-        modes, which can be switched on the fly.
+        Пазл поддерживает CSS, HTML, Javascript и режимы выделения текста, которые можно переключать на лету.
     </p>
 
     <img src="files/puzzles/puzzles-text-text-multiline.jpg" style="max-width: 1000px">
@@ -81,13 +77,13 @@
     <h3>create text</h3>
 
     <p>
-    This puzzle allows you to combine (concatenate) 2 or more pieces of text into a single line. If you provide non-textual values such as numbers, they will be automatically converted to text. Additional inputs are added by dragging an *item* block from the gray toolbox on the left into the *join* block.
+      Этот пазл позволяет объединить (конкатенировать) 2 или более фрагментов текста в одну строку. Если вы указываете нетекстовые значения, например, числа, они будут автоматически преобразованы в текст. Дополнительные вводы добавляются путем перетаскивания блока *item* из серой панели инструментов слева в блок *join*.
     </p>
 
     <img src="files/puzzles/puzzles-text-create-text.jpg" style="max-width: 1000px">
 
     <p>
-    Example: create an annotation composed of some text and the object name.
+      Пример: создать аннотацию, состоящую из некоторого текста и названия объекта.
     </p>
 
     <img src="files/puzzles/puzzles-text-create-text-example.jpg" style="max-width: 1000px">
@@ -98,13 +94,13 @@
     <h3>append text</h3>
 
     <p>
-    This puzzle adds the given text to the specified <a href='manual/ru/puzzles/Variables.html'>variable</a>.
+    Этот пазл добавляет текст в указанную <a href='manual/ru/puzzles/Variables.html'>переменную</a>.
     </p>
 
     <img src="files/puzzles/puzzles-text-append-text.jpg" style="max-width: 1000px">
 
     <p>
-    Example: create an annotation composed of some text and the object name.
+    Пример: создать аннотацию, состоящую из некоторого текста и названия объекта.
     </p>
 
     <img src="files/puzzles/puzzles-text-append-text-example.jpg" style="max-width: 1000px">
@@ -115,13 +111,13 @@
     <h3>replace</h3>
 
     <p>
-    This puzzle searches for the given piece of text and replaces it with the specified piece of text wherever it finds it (case-sensitive).
+      Этот пазл ищет заданный фрагмент текста и заменяет его на указанный фрагмент текста, где бы он ни был найден (с учетом регистра).
     </p>
 
     <img src="files/puzzles/puzzles-text-replace.jpg" style="max-width: 1000px">
 
     <p>
-    Examples:
+    Примеры:
     </p>
 
     <img src="files/puzzles/puzzles-text-replace-example.jpg" style="max-width: 1000px">
@@ -132,13 +128,13 @@
     <h3>reverse</h3>
 
     <p>
-    This puzzle reverses the given piece of text.
+      Этот пазл переворачивает заданный фрагмент текста.
     </p>
 
     <img src="files/puzzles/puzzles-text-reverse.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-text-reverse-example.jpg" style="max-width: 1000px">
@@ -150,13 +146,13 @@
     <h3>length</h3>
 
     <p>
-    This puzzle counts the number of characters in the specified text.
+      Этот пазл подсчитывает количество символов в указанном тексте.
     </p>
 
     <img src="files/puzzles/puzzles-text-length.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-text-length-example.jpg" style="max-width: 1000px">
@@ -168,13 +164,13 @@
     <h3>is empty</h3>
 
     <p>
-    This puzzle checks whether the given text is empty (has length 0). The result is *true* if this is the case and *false* if not. For using with <a href='manual/ru/puzzles/Logic.html'>Logic</a> puzzles.
+      Этот пазл проверяет, является ли заданный текст пустым (имеет длину 0). Результатом будет *true*, если это так, и *false*, если нет. Для использования с пазлами <a href='manual/ru/puzzles/Logic.html'>Логики</a>.
     </p>
 
     <img src="files/puzzles/puzzles-text-is-empty.jpg" style="max-width: 1000px">
 
     <p>
-    Examples:
+    Примеры:
     </p>
 
     <img src="files/puzzles/puzzles-text-is-empty-example.jpg" style="max-width: 1000px">
@@ -185,13 +181,13 @@
     <h3>find</h3>
 
     <p>
-    This puzzle can be used to check whether a piece of text is in another piece of text and, if so, where it appears. If the text was found, it returns its position (characters in text are indexed starting from 0). If the text was not found, the puzzle returns -1.
+      Этот пазл может быть использован для проверки, находится ли фрагмент текста в другом фрагменте текста и, если да, то где он появляется. Если текст найден, то возвращается его положение (символы в тексте индексируются, начиная с 0). Если текст не найден, пазл возвращает -1.
     </p>
 
     <img src="files/puzzles/puzzles-text-find.jpg" style="max-width: 1000px">
 
     <p>
-    Examples:
+    Примеры:
     </p>
 
     <img src="files/puzzles/puzzles-text-find-example.jpg" style="max-width: 1000px">
@@ -202,13 +198,13 @@
     <h3>get letter</h3>
 
     <p>
-    This puzzle extracts the character from the specified position (characters in text are indexed starting from 0).
+      Этот пазл извлекает символ из указанной позиции (символы в тексте индексируются, начиная с 0).
     </p>
 
     <img src="files/puzzles/puzzles-text-get-letter.jpg" style="max-width: 1000px">
 
     <p>
-    Examples:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-text-get-letter-example.jpg" style="max-width: 1000px">
@@ -219,13 +215,13 @@
     <h3>get region</h3>
 
     <p>
-    This puzzle allows a region of text between two specified positions to be extracted (characters in text are indexed starting from 0).
+      Этот пазл позволяет извлечь область текста между двумя указанными позициями (символы в тексте индексируются, начиная с 0).
     </p>
 
     <img src="files/puzzles/puzzles-text-get-region.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-text-get-region-example.jpg" style="max-width: 1000px">
@@ -236,13 +232,13 @@
     <h3>adjust case</h3>
 
     <p>
-    This puzzle creates a version of the input text that is either UPPER CASE (all letters upper-case), lower case or Title Case (first letters upper-case, other letters lower-case). Non-alphabetic characters, and text in languages without case, such as Chinese, are not affected.
+      Этот пазл создает версию входного текста, которая является либо UPPER CASE (все буквы в верхнем регистре), либо в нижнем регистре, либо Title Case (первые буквы в верхнем регистре, остальные буквы в нижнем регистре). Неалфавитные символы и текст на языках без регистра, таких как китайский, не затрагиваются.
     </p>
 
     <img src="files/puzzles/puzzles-text-adjust-case.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-text-adjust-case-example.jpg" style="max-width: 1000px">
@@ -253,13 +249,13 @@
     <h3>trim spaces</h3>
 
     <p>
-    This puzzle can remove space characters from the beginning of the text, from the end of the text or from both sides of the text.
+      Этот пазл может удалять пробелы из начала текста, из конца текста или с обеих сторон текста.
     </p>
 
     <img src="files/puzzles/puzzles-text-trim-spaces.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-text-trim-spaces-example.jpg" style="max-width: 1000px">
@@ -270,13 +266,13 @@
     <h3>count</h3>
 
     <p>
-    This puzzle counts how many times a piece of text appear in the specified text.
+      Этот пазл подсчитывает, сколько раз фрагмент текста появляется в указанном тексте.
     </p>
 
     <img src="files/puzzles/puzzles-text-count.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-text-count-example.jpg" style="max-width: 1000px">
@@ -286,7 +282,7 @@
 
     <h3>new line</h3>
 
-    <p>A newline character (also called "end of line" or "line break" character). Use this character inside the <a href="manual/ru/puzzles/Text.html#create_text">create text</a> or <a href="manual/ru/puzzles/Text.html#append_text">append text</a> puzzles to create multiline texts.</p>
+    <p>Символ новой строки (также называемый "конец строки" или "разрыв"). Используйте этот символ внутри пазлов <a href="manual/ru/puzzles/Text.html#create_text">create text</a> или <a href="manual/ru/puzzles/Text.html#append_text">append text</a> для создания многострочных текстов.</p>
 
     <img src="files/puzzles/puzzles-text-new-line.jpg" style="max-width: 681px">
 
@@ -296,13 +292,13 @@
     <h3>convert to number</h3>
 
     <p>
-    This puzzle tries to convert the specified text to number, so that the obtained value can be used as input for numeric operations. If conversion fails, returns 0.
+      Этот пазл пытается преобразовать указанный текст в число, чтобы полученное значение можно было использовать в качестве входных данных для числовых операций. Если преобразование не удается, возвращается 0.
     </p>
 
     <img src="files/puzzles/puzzles-text-convert-to-number.jpg" style="max-width: 1000px">
 
     <p>
-    Examples:
+    Примеры:
     </p>
 
     <img src="files/puzzles/puzzles-text-convert-to-number-example.jpg" style="max-width: 1000px">
@@ -313,21 +309,21 @@
     <h3>prompt</h3>
 
     <p>
-    This puzzle creates a pop-up window with an input field. The execution chain pauses until the user clicks OK or Cancel buttons, after which the puzzle returns the input value.
+      Этот пазл создает всплывающее окно с полем ввода. Цепочка выполнения приостанавливается, пока пользователь не нажмет кнопки OK или Cancel, после чего пазл возвращает введенное значение.
     </p>
 
     <img src="files/puzzles/puzzles-text-prompt.jpg" style="max-width: 1000px">
 
     <p>
-    Example:
+    Пример:
     </p>
 
     <img src="files/puzzles/puzzles-text-prompt-example.jpg" style="max-width: 1000px">
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблема с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обращайтесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
   </article></body>
 </html>
