--- a/manual/ru/puzzles/Variables.html
+++ b/manual/ru/puzzles/Variables.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Variables Puzzles Reference - Soft8Soft</title>
+    <title>Пазлы Переменных - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="How to manage variables in a visual way using Verge3D Puzzles."/>
     <base href="../../../" />
@@ -9,10 +9,10 @@
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body><article>
-    <h1>Variables</h1>
+    <h1>Переменные</h1>
 
     <p>
-      Variable is a named storage for some known or unknown value. The value can be changed in your program (varies, hence the name).
+      Переменная - это именованное хранилище для какого-то известного или неизвестного значения. Это значение может быть изменено в вашей программе (изменяется, отсюда и название).
     </p>
 
     [contents]
@@ -20,22 +20,22 @@
 
     [anchor:creating_variables]
 
-    <h2>Creating Variables</h2>
+    <h2>Создание Переменных</h2>
 
     <p>
-    Variables can be created in several different ways:
+      Переменные могут быть созданы несколькими различными способами:
     </p>
 
     <ul>
-      <li>You may create a variable by clicking the button <strong>Create variable...</strong> and choosing any name for it. The name, wherever it appears in the program, can be changed via the variable's dropdown menu any time later.</li>
-      <li>Procedures can define inputs, which creates variables that can be used only within the procedure. These are traditionally called <i>parameters</i> or <i>arguments</i>.</li>
-      <li>Every "count with" and "for each" puzzle uses a variable and defines its values. These values can only be used within the puzzle.</li>
+      <li>Вы можете создать переменную, нажав кнопку <strong>Create variable...</strong> и выбрав для нее любое имя. Имя, где бы оно ни появилось в программе, может быть изменено через выпадающее меню переменной в любое время позже.</li>
+      <li>Процедуры могут задавать входы, при этом создавая переменные, которые могут быть использованы только внутри процедуры. Традиционно их называют <i>параметрами</i> или <i>аргументами</i>.</li>
+      <li>В каждом пазле "count with" и "for each" используется переменная и определяются ее значения. Эти значения могут быть использованы только внутри пазла.</li>
     </ul>
 
     <img src="files/puzzles/puzzles-variables-create.jpg">
 
     <p>
-    A typical use case for variable is when you have an object that can be in several states. For example, a door can be open or closed, and if you want to animate it properly you need to know in which exactly status it is now.
+      Типичный случай использования переменной - это когда у вас есть объект, который может находиться в нескольких состояниях. Например, дверь может быть открыта или закрыта, и если вы хотите правильно ее анимировать, вам нужно знать, в каком именно состоянии она сейчас находится.
     </p>
 
 
@@ -44,7 +44,7 @@
 
     [anchor:puzzles_reference]
 
-    <h2>Puzzles Reference</h2>
+    <h2>Референс Пазлов</h2>
 
 
     [anchor:variables_set]
@@ -52,7 +52,7 @@
     <h3>set</h3>
 
     <p>
-    This puzzle assigns a value to a variable.
+      Этот пазл присваивает значение переменной.
     </p>
 
     <img src="files/puzzles/puzzles-variables-set.jpg">
@@ -63,7 +63,7 @@
     <h3>get</h3>
 
     <p>
-    This puzzle provides the value stored in a variable, without changing it.
+      Этот пазл предоставляет значение, хранящееся в переменной, не изменяя его.
     </p>
 
     <img src="files/puzzles/puzzles-variables-get.jpg">
@@ -74,15 +74,15 @@
     <h3>change</h3>
 
     <p>
-    Increments the value stored in a variable by a specified number. If the initial value is not numeric, or not set, then it is considered to be zero which is incremented.
+      Увеличивает значение, хранящееся в переменной, на заданное число. Если начальное значение не является числовым или не задано, то оно считается нулем, который увеличивается.
     </p>
 
     <img src="files/puzzles/puzzles-variables-change.jpg">
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблема с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обращайтесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
 
   </article></body>
