--- a/manual/ru/puzzles/Animation.html
+++ b/manual/ru/puzzles/Animation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Animation Puzzles Reference - Soft8Soft</title>
+    <title>Пазлы Анимации и Ограничения - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="How to control animation using Verge3D Puzzles."/>
     <base href="../../../" />
@@ -10,44 +10,44 @@
   </head>
   <body><article>
 
-    <h1>Animation and Constraint Puzzles</h1>
+    <h1>Пазлы Анимации и Ограничения</h1>
 
     <p>
-      The puzzles from this category are used to perform operations with animation clips, do procedural animations, as well as restrict the movement of the objects.
+      Пазлы из этой категории используются для выполнения операций с анимационными клипами и процедурной анимацией, а также для ограничения движения объектов.
     </p>
 
     <img src="files/puzzles/puzzles-animation.jpg">
 
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:puzzles_reference]
 
-    <h2>Animation Puzzles Reference</h2>
+    <h2>Перечень Анимационных Пазлов</h2>
 
     [anchor:play_animation]
 
     <h3>play animation</h3>
 
     <p>
-    Plays an animation clip. Animation clip names correspond to objects to which animation is assigned in 3ds Max or Blender (only one animation clip can be assigned per object). Use the <a href="manual/ru/puzzles/Selectors.html#select_animation" target="_parent">animation selector</a> puzzle to provide an animation clip for this puzzle.
+      Воспроизводит анимационный клип. Имена анимационных клипов соответствуют объектам, которым назначена анимация в 3ds Max или Blender (на один объект может быть назначен только один анимационный клип). Используйте пазл <a href="manual/ru/puzzles/Selectors.html#select_animation" target="_parent">animation selector</a>, чтобы назначить клип анимации для этого пазла.
     </p>
 
     <p>
-    Use the "from" and "to" fields to specify the frame range. Use the "speed" field to specify the playback speed. The "reversed" checkbox enables reversed playback. The drop-down can be used to change the animation mode - "auto" allows for using the animation mode specified in 3ds Max or Blender, while the other modes override the settings specified in 3ds Max or Blender.
+      Используйте поля "from" и "to" для указания диапазона кадров. Используйте поле "speed" для указания скорости воспроизведения. Флажок "reversed" включает реверсивное воспроизведение. В выпадающем списке можно изменить режим анимации - "auto" позволяет использовать режим анимации, заданный в 3ds Max или Blender, в то время как другие режимы переопределяют настройки, заданные в 3ds Max или Blender.
     </p>
 
     <p>
-    Puzzles in the "when finished: do" slot are processed once the animation is finished (this only is valid for the "once" animation mode).
+      Пазлы в слоте "when finished: do" обрабатываются после завершения анимации (это работает только для режима анимации "once"). 
     </p>
 
     <img src="files/puzzles/puzzles-animation-play.jpg">
 
     <p>
-    This puzzle also works for a list of animation clips.
+      Этот пазл также работает для списка анимационных клипов. 
     </p>
 
 
@@ -56,7 +56,7 @@
     <h3>stop animation</h3>
 
     <p>
-    Stops playing back an animation clip. Also works for a list of animation clips.
+      Останавливает воспроизведение анимационного клипа. Также работает для списка анимационных клипов.
     </p>
 
     <img src="files/puzzles/puzzles-animation-stop.jpg">
@@ -68,7 +68,7 @@
     <h3>pause animation</h3>
 
     <p>
-    Pauses an animation clip playback so that it can be resumed later starting from the frame it was paused on. Also works for a list of animation clips.
+      Приостанавливает воспроизведение анимационного клипа, чтобы его можно было возобновить позже, начиная с кадра, на котором он был приостановлен. Также работает для списка анимационных клипов.
     </p>
 
     <img src="files/puzzles/puzzles-animation-pause.jpg">
@@ -80,7 +80,7 @@
     <h3>resume animation</h3>
 
     <p>
-    Resumes a previously paused animation clip. Also works for a list of animation clips.
+      Возобновляет ранее приостановленный анимационный клип. Также работает для списка анимационных клипов.
     </p>
 
     <img src="files/puzzles/puzzles-animation-resume.jpg">
@@ -92,7 +92,7 @@
     <h3>set animation frame</h3>
 
     <p>
-    Sets an animation clip to a specified frame. Also works for a list of animation clips.
+      Устанавливает анимационный клип на указанный кадр. Также работает для списка анимационных клипов.
     </p>
 
     <img src="files/puzzles/puzzles-animation-set-animation-frame.jpg">
@@ -102,7 +102,7 @@
 
     <h3>get animation frame</h3>
 
-    <p>Get current frame of an animation clip.</p>
+    <p>Получение текущего кадра анимационного клипа.</p>
 
     <img src="files/puzzles/puzzles-animation-get-animation-frame.jpg">
 
@@ -112,7 +112,7 @@
     <h3>is animation playing</h3>
 
     <p>
-    Checks if an animation clip (or any of animations in a list) is currently being played back.
+      Проверяет, воспроизводится ли в данный момент анимационный ролик (или любая анимация из списка).
     </p>
 
     <img src="files/puzzles/puzzles-animation-is-playing.jpg">
@@ -123,7 +123,7 @@
     <h3>get animation</h3>
 
     <p>
-    Retrieves a specified object's animation clip. Also works for a list of objects, a group (or a list of groups) or with the <a href="manual/ru/puzzles/Selectors.html#all_objects">all objects</a> puzzle. The return value is always a list of animation clips (even if there is only one of them).
+      Получает анимационный ролик указанного объекта. Также работает для списка объектов, группы (или списка групп) или с пазлом <a href="manual/ru/puzzles/Selectors.html#all_objects">all objects</a>. Возвращаемое значение всегда представляет собой список анимационных клипов (даже если среди них есть только один).
     </p>
 
     <img src="files/puzzles/puzzles-animation-get-animation.jpg">
@@ -134,7 +134,7 @@
     <h3>clone animation</h3>
 
     <p>
-    Clones an animation clip (or a list of animations) in the specified range.
+      Клонирует анимационный ролик (или список анимаций) в указанном диапазоне.
     </p>
 
     <img src="files/puzzles/puzzles-animation-clone-animation.jpg">
@@ -147,27 +147,27 @@
     <h3>animate param</h3>
 
     <p>
-    Animates a numeric parameter (or all parameters in a list or a <a href="manual/ru/puzzles/Dictionaries.html">dictionary</a>) in between *from* and *to*, during a period specified with *duration* (in seconds). The *easing* dropdown allows you to specify the animation mode (see below).
+      Анимирует числовой параметр (или все параметры в списке или <a href="manual/ru/puzzles/Dictionaries.html">словаре</a>) между *from* и *to*, в течение периода, заданного *duration* (в секундах). Раскрывающийся список *easing* позволяет указать режим анимации (смотрите ниже).
     </p>
 
     <p>
-    The *repeat* field specifies the number of repetitions after the first animation is complete. The *yoyo* checkbox enables backtrack movement (works for *repeat* > 1).
+      Поле *repeat* задает количество повторений после завершения первой анимации. Флажок *yoyo* включает движение назад (работает для *repeat* > 1).
     </p>
 
     <p>
-    Puzzles in the *on update do* slot are triggered every rendering frame while the parameter is animated. Puzzles in the *when finished do* slot are triggered once the animation is finished.
+      Пазлы в слоте *on update do* запускаются каждый кадр рендеринга, пока параметр анимирован. Пазлы в слоте *when finished do* срабатывают по завершении анимации.
     </p>
 
     <img src="files/puzzles/puzzles-animation-animate-param.jpg">
 
     <p>
-    This puzzle wraps the <a href="https://github.com/tweenjs/tween.js/blob/master/docs/user_guide.md" target="_blank">Tween.js</a> library, exposing its all <a href="http://tweenjs.github.io/tween.js/examples/03_graphs.html" target="_blank">31 easing modes</a> (pictured), duration, repeat and yoyo settings, and the update and complete callbacks.
+      Этот пазл оборачивает библиотеку <a href="https://github.com/tweenjs/tween.js/blob/master/docs/user_guide.md" target="_blank">Tween.js</a>, раскрывая содержащиеся в ней <a href="http://tweenjs.github.io/tween.js/examples/03_graphs.html" target="_blank">31 режим смягчения</a> (на рисунке), настройки длительности, повтора и йойо, а также обратные вызовы обновления и завершения.
     </p>
 
     <img src="files/puzzles/puzzles-animation-animate-param-easing-modes.jpg">
 
     <p>
-    The in-between value may be retrieved with an <a href="manual/ru/puzzles/Animation.html#updated_value">updated value</a> puzzle usually placed inside the *on update do* slot.
+      Промежуточное значение может быть получено с помощью пазла <a href="manual/ru/puzzles/Animation.html#updated_value">updated value</a>, обычно помещаемого в слот *on update do*.
     </p>
 
 
@@ -177,22 +177,22 @@
     <h3>updated value</h3>
 
     <p>
-    Returns the in-between value produced by the <a href="manual/ru/puzzles/Animation.html#animate_param">animate param</a> puzzle. Depending on the type of the animated parameter, can be a number, a list or a <a href="manual/ru/puzzles/Dictionaries.html">dictionary</a>.
+      Возвращает промежуточное значение, полученное с помощью пазла <a href="manual/ru/puzzles/Animation.html#animate_param">animate param</a>. В зависимости от типа анимированного параметра может быть числом, списком или <a href="manual/ru/puzzles/Dictionaries.html">словарем</a>.
     </p>
 
     <img src="files/puzzles/puzzles-animation-updated-value.jpg">
 
     <p>
-    This puzzle may be placed anywhere in a scenario, but naturally works in the *on update do* slot of the <a href="manual/ru/puzzles/Animation.html#animate_param">animate param</a> puzzle where it is updated every frame.
+      Этот пазл может быть размещен в любом месте сценария, но лучше всего работает в слоте *on update do* пазла <a href="manual/ru/puzzles/Animation.html#animate_param">animate param</a>, где он обновляется каждый кадр. 
     </p>
 
 
     [anchor:constraints_puzzles_reference]
 
-    <h2>Constraints Puzzles Reference</h2>
+    <h2>Перечень Пазлов Ограничения</h2>
 
     <p>
-    If an object is not parented to another object, the constraints will work in world space. Otherwise they will work in the parent object's space - you can select the parent object in Blender, 3ds Max, or Maya to show up the coordinate axes.
+      Если один объект не является родительским по отношению к другому , ограничения будут работать в мировом пространстве. В противном случае они будут работать в пространстве родительского объекта - вы можете выбрать родительский объект в Blender, 3ds Max или Maya, чтобы отобразить оси координат.
     </p>
 
 
@@ -201,7 +201,7 @@
     <h3>limit transform</h3>
 
     <p>
-    Creates a constraint to limit object position, rotation or scale along a selected axis. Constraint *id* should be unique, otherwise an existing constraint with the same id will be replaced. The *min* and *max* slots specify the range between which the movement is allowed.
+      Создает ограничение положения, поворота или масштаба объекта вдоль выбранной оси. Ограничение *id* должно быть уникальным, иначе существующее ограничение с таким же id будет заменено. Слоты *min* и *max* задают диапазон, в котором разрешено перемещение.
     </p>
 
     <img src="files/puzzles/puzzles-constraints-limit-transform.jpg">
@@ -213,7 +213,7 @@
     <h3>copy transform</h3>
 
     <p>
-    Creates a constraint to copy object position, rotation or scale from another object. Constraint *id* should be unique, otherwise an existing constraint with the same id will be replaced.
+      Создает ограничение для копирования положения, поворота или масштаба объекта из другого объекта. Ограничение *id* должно быть уникальным, иначе существующее ограничение с таким же id будет заменено.
     </p>
 
     <img src="files/puzzles/puzzles-constraints-copy-transform.jpg">
@@ -228,16 +228,16 @@
     <h3>remove / mute / unmute constraint</h3>
 
     <p>
-    Removes, mutes or unmutes a constraint assigned to a specified object. Other constraints assigned to this object (if any) will remain intact.
+      Удаляет, отключает или приглушает ограничение, назначенное указанному объекту. Другие ограничения, назначенные этому объекту (если таковые имеются), останутся нетронутыми.
     </p>
 
     <img src="files/puzzles/puzzles-constraints-remove-mute-unmute-constraint.jpg">
 
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблемы с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обращайтесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
 
   </article></body>
