--- a/manual/ru/puzzles/Initialization.html
+++ b/manual/ru/puzzles/Initialization.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Initialization Puzzles Reference - Soft8Soft</title>
+    <title>Пазлы Инициализации - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="How to perform application initialization tasks with Verge3D Puzzles."/>
     <base href="../../../" />
@@ -9,47 +9,47 @@
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body><article>
-    <h1>Initialization Puzzles</h1>
+    <h1>Пазлы Инициализации</h1>
 
     <p>
-    These puzzles are located under the <strong>init</strong> tab and are interpreted before a Verge3D application is initialized.
+    Эти пазлы находятся во вкладке <strong>init</strong> и интерпретируются перед инициализацией приложения Verge3D.
     </p>
 
     <img src="files/puzzles/puzzles-init.jpg">
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:puzzles_reference]
 
-    <h2>Puzzles Reference</h2>
+    <h2>Перечень Пазлов</h2>
 
     [anchor:configure_application]
 
     <h3>configure application</h3>
 
     <p>
-      Allows to set up application initialization parameters, including some WebGL context creation parameters.
+      Позволяет задать параметры инициализации приложения, включая некоторые параметры создания контекста WebGL.
     </p>
 
     <dl>
       <dt>compressed assets</dt>
-      <dd>makes the app load a compressed scene in <strong>.xz</strong> format instead of a regular <strong>.gltf</strong> file (see <a href="manual/ru/introduction/Asset-compression.html">Asset Compression</a> for more info).</dd>
+      <dd>заставляет приложение загружать сжатую сцену в формате <strong>.xz</strong> вместо обычного <strong>.gltf</strong> (см. <a href="manual/ru/introduction/Asset-compression.html">Asset Compression</a> для большей информации).</dd>
 
       <dt>default fullscreen button</dt>
-      <dd>enables the default fullscreen button located in the top right corner.</dd>
+      <dd>включает стандартную кнопку полноэкранного режима, расположенную в правом верхнем углу.</dd>
 
       <dt>transparent background</dt>
       <!-- enabling transparency for AR is a hack for WebXR Viewer -->
-      <dd>makes the background transparent so that the underlying parts of a web page become visible through the WebGL canvas. Enable this parameter to inline your 3D content on a web page or to use the augmented reality feature.</dd>
+      <dd>делает фон прозрачным, чтобы основные части веб-страницы были видны через canvas WebGL. Включите этот параметр, чтобы встроить 3D-контент на веб-страницу или использовать функцию дополненной реальности.</dd>
 
       <dt>enable screenshots</dt>
-      <dd>makes it possible to properly capture screenshots from the WebGL canvas (sets the <strong>preserveDrawingBuffer</strong> property of the WebGL context to *true*).</dd>
+      <dd>позволяет правильно снимать скриншоты с WebGL canvas (устанавливает свойство <strong>preserveDrawingBuffer</strong> контекста WebGL в *true*).</dd>
 
       <dt>fade annotations</dt>
-      <dd>makes annotations fade when they are blocked by scene objects.</dd>
+      <dd>делает аннотации тусклыми, когда они блокируются объектами сцены.</dd>
     </dl>
 
     <img src="files/puzzles/puzzles-init-configure-app.jpg">
@@ -61,13 +61,13 @@
     <h3>setup preloader + percentage</h3>
 
     <p>
-    Removes the default preloader and exposes event callbacks to allow for handling preloader progress events.
+    Удаляет прелоадер по умолчанию и передает обратные вызовы событий для обработки событий прогресса прелоадера.
     </p>
 
     <img src="files/puzzles/puzzles-init-setup-preloader.jpg">
 
     <p>
-    In the following example, a custom preloader is represented with a container HTML element (e.g., a &lt;div&gt;) with the id "preloader". Inside it, there is another element with the id "loading progress" (e.g., a &lt;span&gt;), in which % of loading is printed using the *persentage* puzzle. In addition to that, the width of the third element (e.g., a &lt;div&gt;) is dynamically changed to graphically represent the loading progress.
+      В следующем примере пользовательский прелоадер представлен с контейнером HTML-элементом (например, &lt;div&gt;) с id "preloader". Внутри него находится другой элемент с id "loading progress" (например, &lt;span&gt;), в котором выводится % загрузки с помощью пазла *persentage*. Кроме того, ширина третьего элемента (например, &lt;div&gt;) динамически изменяется для графической визуализации прогресса загрузки.
     </p>
 
     <img src="files/puzzles/puzzles-init-setup-preloader-example.jpg">
@@ -79,15 +79,15 @@
     <h3>load font</h3>
 
     <p>
-    Loads font from a specified URL and makes it accessible via *font-family* CSS rule.
+    Загружает шрифт из указанного URL и делает его доступным через CSS-правило *font-family*.
     </p>
 
     <img src="files/puzzles/puzzles-init-load-font.jpg">
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблема с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обращайтесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
   </article></body>
 </html>
