--- a/manual/ru/puzzles/Library.html
+++ b/manual/ru/puzzles/Library.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Library Puzzles Reference - Soft8Soft</title>
+    <title>Библиотеки Пазлов - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Using Verge3D Puzzles library, a persistent storage for groups of puzzles for re-use in multiple projects."/>
     <base href="../../../" />
@@ -10,35 +10,35 @@
   </head>
   <body><article>
 
-    <h1>Library for Your Puzzles</h1>
+    <h1>Библиотеки Пазлов</h1>
 
-    <p>Library is a persistent storage for groups of puzzles for re-use in multiple projects.</p>
+    <p>Библиотека - это постоянное хранилище групп пазлов для повторного использования в нескольких проектах.</p>
 
     <img src="files/puzzles/puzzles-library.jpg">
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:introduction]
 
-    <h2>Introduction</h2>
+    <h2>Введение</h2>
 
-    <p>There are two libraries in Verge3D:</p>
+    <p>В Verge3D есть две библиотеки:</p>
 
     <ul>
-      <li>*System Library* - stored in *library.xml* file inside the *puzzles* folder. This is the read-only stock library which comes with Verge3D.</li>
-      <li>*User Library* - stored in *my_library.xml* file inside the *puzzles* folder. You can use this library to add your own Puzzles.</li>
+      <li>*System Library* (Системная Библиотека) - хранится в файле *library.xml* в папке *puzzles*. Это стоковая библиотека, доступная только для чтения, которая поставляется с Verge3D.</li>
+      <li>*User Library* (Библиотека Пользователя) - хранится в файле *my_library.xml* в папке *puzzles*. Вы можете использовать эту библиотеку для добавления своих собственных пазлов.</li>
     </ul>
 
 
     [anchor:adding_entries]
 
-    <h2>Adding Entries</h2>
+    <h2>Добавление Записей</h2>
 
     <p>
-    You can add a puzzle group to the <em>user library</em> by right-clicking on it and selecting the option <strong>Save N Puzzles to Library</strong>. In the modal window type the name for the group as it will appear in the library's list of entries. Refresh the list of entries by reloading the page with the Puzzles editor to update that list.
+      Вы можете добавить группу пазлов в <em>библиотеку пользователя</em>, щелкнув на ней правой кнопкой мыши и выбрав опцию <strong>Save N Puzzles to Library</strong>. В модальном окне введите название группы так, как оно будет отображаться в списке записей библиотеки. Обновите список записей, перезагрузив страницу с редактором пазлов, чтобы обновить этот список.
     </p>
 
     <img src="files/puzzles/puzzles-library-save.jpg">
@@ -46,51 +46,51 @@
 
     [anchor:using_entries]
 
-    <h2>Using Entries</h2>
+    <h2>Использование Записей</h2>
 
-    <p>A saved group of puzzle can be retrieved from the library by dragging it out to a workspace.</p>
+    <p>Сохраненную группу пазлов можно извлечь из библиотеки, перетащив ее на рабочую область.</p>
 
     <img src="files/puzzles/puzzles-library-retrieve.jpg">
 
 
     [anchor:renaming_entries]
 
-    <h2>Renaming Entries</h2>
+    <h2>Переименование Записей</h2>
 
     <p>
-    There is no dedicated control for renaming library entries as of version 3.1. However, you can easily rename an entry by editing the *my_library.xml* file (in 2 places).
+    В версии 3.1 нет специального элемента управления для переименования записей библиотеки. Однако вы можете легко переименовать запись, отредактировав файл *my_library.xml* (в двух местах).
     </p>
 
     <img src="files/puzzles/puzzles-library-rename.jpg" style="max-width: 895px">
 
-    <p>Once renamed, your library entry name will be updated after refreshing the editor.</p>
+    <p>После переименования имя записи вашей библиотеки будет обновлено после обновления редактора.</p>
 
 
     [anchor:deleting_entries]
 
-    <h2>Deleting Entries</h2>
+    <h2>Удаление Записей</h2>
 
-    <p>An entry can be deleted from the <em>user library</em> by clicking the ❌ button.</p>
+    <p>Запись можно удалить из <em>библиотеки пользователя</em>, нажав на кнопку ❌.</p>
 
 
     [anchor:backup]
 
-    <h2>Backup</h2>
+    <h2>Резервное Копирование</h2>
 
     <p>
-    Every time you save or delete entries, the previously saved file *puzzles/my_library.xml* is copied to the folder called *library_backup* with a timestamp added to the file name.
+    Каждый раз, когда вы сохраняете или удаляете записи, ранее сохраненный файл *puzzles/my_library.xml* копируется в папку *library_backup* с меткой времени, добавленной к имени файла.
     </p>
 
     <img src="files/puzzles/puzzles-library-backup.jpg" style="max-width: 971px">
 
     <p>
-    This allows you to restore any of the previously saved revisions of your <em>user library</em> when you need it. Simply copy a file back to the *puzzles* folder root and remove the time stamp from its name. Your library will be updated after refreshing the editor.
+    Это позволит вам восстановить любую из ранее сохраненных редакций вашей <em>библиотеки пользователя</em>, когда она вам понадобится. Просто скопируйте файл обратно в корень папки *puzzles* и удалите временную метку из его имени. Ваша библиотека будет обновлена после обновления редактора.
     </p>
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблема с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обращайтесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
   </article></body>
 </html>
