--- a/manual/ru/puzzles/Postprocessing.html
+++ b/manual/ru/puzzles/Postprocessing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Post-processing Puzzles Reference - Soft8Soft</title>
+    <title>Пазлы Постобработки - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="How to enable bloom, SSAO, DOF, grayscale, SSR and other post-processing effects with Verge3D Puzzles."/>
     <base href="../../../" />
@@ -10,62 +10,62 @@
   </head>
   <body><article>
 
-    <h1>Post-processing Puzzles</h1>
+    <h1>Пазлы Постобработки</h1>
 
-    <p>These puzzles are used to setup various post-processing effects.</p>
+    <p>Эти пазлы используются для настройки различных эффектов постобработки.</p>
 
     <img src="files/puzzles/puzzles-postprocessing.jpg">
 
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:live_preview]
 
-    <h2>Live Preview</h2>
+    <h2>Предварительный Просмотр</h2>
 
-    <p>The post-processing puzzles support the <em>live preview</em> feature. With live preview enabled, you can tweak the post-processing effects and get the result in the Puzzles viewport without the need to run or save/reload your puzzles.</p>
+    <p>Пазлы с постобработкой поддерживают функцию <em>live preview</em>. При включенном режиме предварительного просмотра вы можете настроить эффекты постобработки и получить результат в окне просмотра пазлов без необходимости запуска или сохранения/перезагрузки пазлов.</p>
 
-    <p>Live preview feature is enabled by default and supported when there are no inputs connected to your puzzle:</p>
+    <p>Функция предварительного просмотра в реальном времени включена по умолчанию и поддерживается при отсутствии вводных параментов, подключенных к пазлу:</p>
 
     <img src="files/puzzles/puzzles-postprocessing-live-preview.jpg" style="max-width: 855px">
 
 
     [anchor:puzzles_reference]
 
-    <h2>Puzzles Reference</h2>
+    <h2>Перечень Пазлов</h2>
 
     [anchor:bloom]
 
     <h3>bloom</h3>
 
-    <p>Enable or change parameters of the bloom effect.</p>
+    <p>Включение или изменение параметров эффекта bloom.</p>
 
     <img src="files/puzzles/puzzles-postprocessing-bloom.jpg">
 
-    <p>Parameters:</p>
+    <p>Параметры:</p>
 
     <ul>
-      <li>*threshold* — minimum lighting intensity to render the bloom effect.</li>
-      <li>*strength* — bloom strength.</li>
-      <li>*radius* — bloom blur radius.</li>
+      <li>*threshold* — минимальная интенсивность освещения для рендеринга эффекта bloom.</li>
+      <li>*strength* — интенсивность эффекта bloom.</li>
+      <li>*radius* — радиус размытия эффекта bloom.</li>
     </ul>
 
     [anchor:brightness_contrast]
 
     <h3>brightness/contrast</h3>
 
-    <p>Allows for tweaking brightness and contrast of the rendering.</p>
+    <p>Позволяет настраивать яркость и контрастность рендеринга.</p>
 
     <img src="files/puzzles/puzzles-postprocessing-brightness-contrast.jpg">
 
-    <p>Parameters:</p>
+    <p>Параметры:</p>
 
     <ul>
-      <li>*brightness* — image brightness factor.</li>
-      <li>*contrast* — image contrast factor.</li>
+      <li>*brightness* — коэффициент яркости изображения.</li>
+      <li>*contrast* — коэффициент контрастности изображения.</li>
     </ul>
 
 
@@ -73,17 +73,17 @@
 
     <h3>depth of field</h3>
 
-    <p>Enable or change parameters of the depth of field (DOF) effect.</p>
+    <p>Включение или изменение параметров эффекта глубины резкости (DOF).</p>
 
     <img src="files/puzzles/puzzles-postprocessing-dof.jpg">
 
-    <p>Parameters:</p>
+    <p>Параметры:</p>
 
     <ul>
-      <li>*focus* — DOF focus distance.</li>
-      <li>*aperture* — camera aperture factor.</li>
-      <li>*maxblur* — DOF blur radius.</li>
-      <li>*depth leak threshold* — threshold to eliminate DOF distance artefacts.</li>
+      <li>*focus* — дистанция фокусировки DOF.</li>
+      <li>*aperture* — коэффициент апертуры камеры.</li>
+      <li>*maxblur* — радиус размытия DOF.</li>
+      <li>*depth leak threshold* — порог для устранения артефактов расстояния DOF.</li>
     </ul>
 
 
@@ -91,7 +91,7 @@
 
     <h3>grayscale</h3>
 
-    <p>Enables the grayscale effect.</p>
+    <p>Включает черно-белый режим рендеринга.</p>
 
     <img src="files/puzzles/puzzles-postprocessing-grayscale.jpg">
 
@@ -101,16 +101,16 @@
 
     <h3>ambient occlusion</h3>
 
-    <p>Enable or change parameters of the screen space ambient occlusion (SSAO) effect.</p>
+    <p>Включение или изменение параметров эффекта окклюзии окружающего пространства экрана (SSAO).</p>
 
     <img src="files/puzzles/puzzles-postprocessing-ssao.jpg">
 
-    <p>Parameters:</p>
+    <p>Параметры:</p>
 
     <ul>
-      <li>*radius* — SSAO effect radius.</li>
-      <li>*min distance* — distance threshold to reduce artefacts caused by objects located too close.</li>
-      <li>*max distance* — distance threshold to reduce artefacts caused by objects located too far.</li>
+      <li>*radius* — радиус эффекта SSAO.</li>
+      <li>*min distance* — порог расстояния для уменьшения артефактов, вызванных объектами, расположенными слишком близко.</li>
+      <li>*max distance* — порог расстояния для уменьшения артефактов, вызванных объектами, расположенными слишком далеко.</li>
     </ul>
 
 
@@ -118,16 +118,16 @@
 
     <h3>simple refraction</h3>
 
-    <p>Enables an easy refraction effect for a specified material.</p>
+    <p>Включает эффект легкого отражения (рефракции) для указанного материала.</p>
 
     <img src="files/puzzles/puzzles-postprocessing-simple-refraction.jpg">
 
-    <p>Parameters:</p>
+    <p>Параметры:</p>
 
     <ul>
-      <li>*material* — material used to assign the effect to.</li>
-      <li>*distance* — maximum length of the refracted ray.</li>
-      <li>*render after refraction* — object(s) to be excluded from the normal rendering queue and to be rendered after the refraction effect is applied.</li>
+      <li>*material* — материал, на который назначается эффект.</li>
+      <li>*distance* — максимальная длина преломленного луча.</li>
+      <li>*render after refraction* — объект(ы), которые будут исключены из очереди обычного рендеринга и будут рендериться после применения эффекта преломления.</li>
     </ul>
 
 
@@ -135,22 +135,22 @@
 
     <h3>screen space reflection/refraction</h3>
 
-    <p>Enables screen space reflection/refraction (SSR) effect.</p>
+    <p>Включает эффект отражения/преломления экранного пространства (SSR).</p>
 
     <img src="files/puzzles/puzzles-postprocessing-ssr.jpg">
 
-    <p>Parameters:</p>
+    <p>Параметры:</p>
 
     <ul>
-      <li>*for material* — material used to assign the effect to.</li>
-      <li>*steps* — number of depth search steps along the reflected/refracted ray (higher value = better quality, lower performance).</li>
-      <li>*stride* — stride of search steps (in pixels) (higher value = lower quality, better performance, 1 pixel = max quality).</li>
-      <li>*binary search steps* — number of binary search iterations (higher value = better quality, lower performance).</li>
-      <li>*thickness* — factor to eliminate SSR artefacts (refraction only).</li>
-      <li>*max distance* — maximum length of the reflected/refracted ray.</li>
-      <li>*resolution* — resolution multiplier for the depth buffer (from 0 to 1; 1 = best quality).</li>
-      <li>*jitter* — noise factor to improve depth search (from 0 to 1).</li>
-      <li>*render after* — objects to be rendered after SSR applied.</li>
+      <li>*for material* — материал, на который назначается эффект.</li>
+      <li>*steps* — количество шагов поиска глубины вдоль отраженного/преломленного луча (большее значение = лучшее качество, меньшая производительность).</li>
+      <li>*stride* — шаг поиска (в пикселях) (большее значение = более низкое качество, лучшая производительность, 1 пиксель = максимальное качество).</li>
+      <li>*binary search steps* — количество итераций двоичного поиска (большее значение = лучшее качество, меньшая производительность).</li>
+      <li>*thickness* — коэффициент для устранения артефактов SSR (только преломление).</li>
+      <li>*max distance* — максимальная длина отраженного/преломленного луча.</li>
+      <li>*resolution* — множитель разрешения для буфера глубины (от 0 до 1; 1 = наилучшее качество).</li>
+      <li>*jitter* — коэффициент шума для улучшения поиска глубины (от 0 до 1).</li>
+      <li>*render after* — объекты, которые будут рендериться после применения SSR.</li>
     </ul>
 
     <img src="files/puzzles/puzzles-postprocessing-ssr-example.jpg" style="max-width: 819px">
@@ -160,14 +160,14 @@
 
     <h3>remove post-processing effects</h3>
 
-    <p>Removes all post-processing effects.</p>
+    <p>Удаляет все эффекты постобработки.</p>
 
     <img src="files/puzzles/puzzles-postprocessing-remove-postprocessing.jpg">
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблема с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обращайтесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
   </article></body>
 </html>
