--- a/manual/ru/puzzles/Scenes.html
+++ b/manual/ru/puzzles/Scenes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Scenes Puzzles Reference - Soft8Soft</title>
+    <title>Пазлы сцены - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="How to perform various operations with your scenes and rendering with Verge3D Puzzles."/>
     <base href="../../../" />
@@ -9,23 +9,23 @@
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body><article>
-    <h1>Scenes</h1>
+    <h1>Пазлы Сцены</h1>
 
     <p>
-      The puzzles from this category perform various operations with scenes and rendering.
+      Пазлы из этой категории выполняют различные операции со сценами и рендерингом.
     </p>
 
     <img src="files/puzzles/puzzles-scenes.jpg">
 
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:puzzles_reference]
 
-    <h2>Puzzles Reference</h2>
+    <h2>Перечень Пазлов</h2>
 
 
     [anchor:load_scene]
@@ -33,17 +33,17 @@
     <h3>load scene + percentage</h3>
 
     <p>
-    When this puzzle is triggered, the current scene is unloaded and a new scene is loaded from a specified <em>.gltf</em> file.
+      При срабатывании этого пазла текущая сцена выгружается, и загружается новая сцена из указанного файла <em>.gltf</em>.
     </p>
 
     <img src="files/puzzles/puzzles-scenes-load-scene.jpg">
 
     <p>
-      After loading is finished, the puzzles in the "when loaded do" slot are triggered. Also, there is an optional "on progress do" slot. Puzzles placed in this slot are continuously triggered during the loading and can utilize the "percentage" puzzle. Once the scene is loaded it's assigned a name which can be used to access and manipulate the scene via various object-related puzzles. By default the assigned name equals to the specified scene URL (e.g. 'path/to/scene.gltf'). The "alias" option if enabled allows to set the name manually.
+      После завершения загрузки запускаются пазлы в слоте "when loaded do". Кроме того, существует дополнительный слот "on progress do". Пазлы, помещенные в этот слот, постоянно срабатывают во время загрузки и могут задействовать пазл "percentage". После загрузки сцены ей присваивается имя, которое можно использовать для доступа и манипулирования сценой с помощью различных пазлов, связанных с объектами. По умолчанию присвоенное имя равно указанному URL сцены (например, 'path/to/scene.gltf'). Опция "alias", если она включена, позволяет задать имя вручную.
     </p>
 
     <p>
-      Another optional "on error do" slot triggers in case of load errors (such as missing glTF file).
+      Еще один дополнительный слот "on error do" срабатывает в случае ошибок загрузки (например, отсутствующий файл glTF).
     </p>
 
 
@@ -55,21 +55,21 @@
     <h3>append scene + percentage</h3>
 
     <p>
-      When this puzzle is triggered, a new scene is loaded from a specified <em>.gltf</em> file and appended to the current scene.
+    При срабатывании этого пазла новая сцена загружается из указанного файла <em>.gltf</em> и добавляется к текущей сцене.
     </p>
 
     <img src="files/puzzles/puzzles-scenes-append-scene.jpg">
 
     <p>
-      After loading is finished, the puzzles in the "when loaded do" slot are triggered. Also there can be enabled the "on progress do" slot. Puzzles placed in this slot are continuously triggered during the loading and can utilize the "percentage" puzzle. The "append scene" puzzle doesn't load cameras and lights from a new scene by default. This behavior can be changed in the puzzle's options.
+    После завершения загрузки запускаются пазлы в слоте "when loaded do". Также может быть включен слот "on progress do". Пазлы, помещенные в этот слот, постоянно срабатывают во время загрузки и могут использовать пазл "percentage". Пазл "append scene" по умолчанию не загружает камеры и свет из новой сцены. Это можно изменить в опциях пазла.
     </p>
 
     <p>
-      Once the scene is appended it's assigned a name which can be used to access and manipulate the scene via various object-related puzzles. By default the assigned name equals to the specified scene URL (e.g. 'path/to/scene.gltf'). The "alias" option, if enabled, allows to set the name manually.
+    После добавления сцены ей присваивается имя, которое может быть использовано для доступа и манипулирования сценой с помощью различных пазлов, связанных с объектами. По умолчанию присвоенное имя равно указанному URL сцены (например, 'path/to/scene.gltf'). Опция "alias", если она включена, позволяет задать имя вручную.
     </p>
 
     <p>
-      Another optional "on error do" slot triggers in case of load errors (such as missing glTF file).
+    Еще один дополнительный слот "on error do" срабатывает в случае ошибок загрузки (например, отсутствующий файл glTF).
     </p>
 
 
@@ -81,8 +81,8 @@
     <h3>unload scene</h3>
 
     <p>
-    Unloads the specified scene or its part from the
-    application. Use the empty text value in order to unload all scenes.
+      Выгружает указанную сцену или ее часть из
+      приложения. Используйте пустое текстовое значение для выгрузки всех сцен.
     </p>
 
     <img src="files/puzzles/puzzles-scenes-unload-scene.jpg">
@@ -94,7 +94,7 @@
     <h3>enable rendering</h3>
 
     <p>
-    Resumes previously disabled rendering.
+      Возобновляет ранее отключенный рендеринг.
     </p>
 
     <img src="files/puzzles/puzzles-scenes-enable-rendering.jpg">
@@ -106,17 +106,13 @@
     <h3>disable rendering</h3>
 
     <p>
-    Disables rendering. The graphics won't be updated but the user events will be captured and animation timelines will progress.
+    Отключает рендеринг. Графика не будет обновляться, но пользовательские события будут фиксироваться, а временная шкала анимации будет прогрессировать.
     </p>
 
     <img src="files/puzzles/puzzles-scenes-disable-rendering.jpg">
 
     <p>
-    You can use disable rendering for the purpose of saving batteries on mobile
-    devices or laptops, and getting rid of cooler noise on desktops. You can
-    also enable the *anti-alias* option to significantly increase the rendering
-    quality and compensate the loss of performance. This option targets the next
-    frame after the rendering stops.
+      Вы можете использовать отключение рендеринга с целью экономии заряда батареи на мобильных устройствах или ноутбуках и избавления от шума кулера на настольных компьютерах. Вы также можете включить опцию *anti-alias*, чтобы значительно повысить качество рендеринга и компенсировать потерю производительности. Эта опция нацелена на следующий кадр после остановки рендеринга.
     </p>
 
     <img src="files/puzzles/puzzles-scenes-enable-disable-rendering-example.jpg">
@@ -127,16 +123,16 @@
     <h3>create environment</h3>
 
     <p>
-      Create a new image-based lighting and assign a background to the scene. This puzzle also creates a new material with the name specified as the first parameter and adds it to the scene. You can use this material to replace textures or colors of the environment.
+      Создайте новое освещение на основе изображения и назначьте сцене фон. Эта головоломка также создает новый материал с именем, указанным в качестве первого параметра, и добавляет его в сцену. Вы можете использовать этот материал для замены текстур или цветов окружения.
     </p>
 
     <p>
-      The second parameter can be ether:
+      Второй параметр может быть любым:
     </p>
 
     <ul>
-      <li>*color*—the environment lighting will be based on the default 256×128 HDR image, the background will be based on the default grey color value.</li>
-      <li>*texture*—both the environment lighting and background will be based on the default 256×128 HDR image.</li>
+      <li>*color*—освещение окружения будет основано на HDR-изображении 256×128 по умолчанию, фон будет основан на значении серого цвета по умолчанию.</li>
+      <li>*texture*—и освещение среды, и фон будут основаны на стандартном HDR-изображении 256×128.</li>
     </ul>
 
     <img src="files/puzzles/puzzles-scenes-create-environment-example.jpg">
@@ -147,22 +143,22 @@
     <h3>batch geometry</h3>
 
     <p>
-      Merge geometry of a specified group of meshes to improve rendering performance. Upon execution, the puzzle collects meshes with similar properties, such as material in use, shadow settings, rendering order, etc, then creates and appends a new batch to the scene. Objects that can't be merged together are left intact.
+      Слияние геометрии указанной группы мешей для повышения производительности рендеринга. При выполнении пазл собирает меши с похожими свойствами, такими как используемый материал, настройки тени, порядок рендеринга и т.д., затем создает и добавляет новую группу в сцену. Объекты, которые не могут быть объединены вместе, остаются нетронутыми.
     </p>
 
     <img src="files/puzzles/puzzles-scenes-batch-geometry.jpg">
 
     <p>
-      To observe how batching works, just open the <a href="manual/ru/introduction/FAQ.html#browser_console">browser console</a>:
+      Чтобы увидеть, как работает пакетная обработка, просто откройте <a href="manual/ru/introduction/FAQ.html#browser_console">браузерную консоль</a>:
     </p>
 
     <img src="files/puzzles/puzzles-scenes-batch-geometry-console.jpg">
 
     <p>
-      In each "Adding batch object..." line you can see the name of the created batch object. This name consists of the name of the material forming the batch, the 'x' factor representing the number of meshes merged together and the "_batch" postfix.</p>
+      В каждой строке "Adding batch object..." можно увидеть имя создаваемого пакетного объекта. Это имя состоит из названия материала, образующего пакет, коэффициента 'x', представляющего количество мешей, объединенных вместе, и постфикса "_batch".</p>
 
     <p>
-      For example:
+      Например:
     </p>
 
     <code class="language-html">
@@ -170,11 +166,11 @@
     </code>
 
     <p>
-      line says that 6 meshes with the "big_table_wood" material were merged to a new batch object "big_table_wood_x6_batch".
+      строка означает, что 6 мешей с материалом "big_table_wood" были объединены в новый пакетный объект "big_table_wood_x6_batch".
     </p>
 
     <p class="note">
-      Since the batch parts become "fixed" together, make sure you don't batch objects which you plan to move around, animate, or change individually from the batch.
+      Поскольку части пакета становятся "закрепленными" вместе, убедитесь, что вы не объединяете в пакет объекты, которые вы планируете перемещать, анимировать или изменять отдельно от пакета.
     </p>
 
 
@@ -183,11 +179,11 @@
     <h3>export to gltf</h3>
 
     <p>
-      Export your scene, model or a group of models to glTF 2.0 format. Specify the *only visible* option to export only visible objects while the *binary* option is used to export to GLB (glTF Binary) format.
+      Экспортирует сцену, модель или группу моделей в формат glTF 2.0. Укажите опцию *only visible* для экспорта только видимых объектов, опция *binary* используется для экспорта в формат GLB (glTF Binary).
     </p>
 
     <p>
-      For best results, as well as for creating standard glTF files (without Soft8Soft/Verge3D extensions) that can be viewed by third-party glTF viewers (such as Microsoft Windows 10’s default glTF viewer), we recommend you to use glTF-compatible materials. See how to create them in <a href="manual/ru/blender/GLTF-Materials.html">Blender</a>, <a href="manual/ru/max/GLTF-Materials.html">3ds Max</a>, or <a href="manual/ru/maya/GLTF-Materials.html">Maya</a>.
+      Для достижения наилучших результатов, а также для создания стандартных файлов glTF (без расширений Soft8Soft/Verge3D), которые могут просматриваться сторонними программами просмотра glTF (например, программой просмотра glTF по умолчанию в Microsoft Windows 10), мы рекомендуем вам использовать материалы, совместимые с glTF. Посмотрите, как их создавать в <a href="manual/ru/blender/GLTF-Materials.html">Blender</a>, <a href="manual/ru/max/GLTF-Materials.html">3ds Max</a>, or <a href="manual/ru/maya/GLTF-Materials.html">Maya</a>.
     </p>
 
     <img src="files/puzzles/puzzles-scenes-export-to-gltf.jpg">
@@ -198,22 +194,22 @@
     <h3>raycast</h3>
 
     <p>
-      Cast a ray from the source point (or object) in the given direction and return a list of all intersections (if any). The third parameter of the puzzle is used to reduce a set of the intersected objects. Leave <strong>none</strong> or specify the name of your scene to intersect all objects located in the loaded scene.
+      Проводит луч из исходной точки (или объекта) в заданном направлении и отображает список всех пересечений (если они есть). Третий параметр пазла используется для уменьшения количества пересекаемых объектов. Оставьте <strong>none</strong> или укажите имя вашей сцены, чтобы пересечь все объекты, расположенные в загруженной сцене.
     </p>
 
     <p>
-      The returned list contains a sequence of dictionaries with the following information:
+      Отображаемый список содержит последовательность словарей со следующей информацией:
     </p>
 
     <ul>
-      <li>*object* — name of the interected object</li>
-      <li>*distance* — distance to the point of intersection</li>
-      <li>*point* — XYZ coordinates (vector) of the point of intersection</li>
-      <li>*normal* — XYZ coordinates (vector) of the normal at the point of intersection</li>
-      <li>*uv* — UV coordiates of the point of intersection</li>
+      <li>*object* — имя пересекаемого объекта</li>
+      <li>*distance* — расстояние до точки пересечения</li>
+      <li>*point* — XYZ координаты (вектор) точки пересечения</li>
+      <li>*normal* — XYZ координаты (вектор) нормали в точке пересечения</li>
+      <li>*uv* — UV координаты точки пересечения</li>
     </ul>
 
-    <p>The list of intersections is sorted by distance, closest first.</p>
+    <p>Список пересечений отсортирован по расстоянию - от ближайшего.</p>
 
     <img src="files/puzzles/puzzles-scenes-raycast.jpg">
 
@@ -223,16 +219,16 @@
     <h3>add fog</h3>
 
     <p>
-        Add the fog effect to the scene. Use zeros either for <b>RGB</b> or for
-        <b>density</b> to disable the added fog.
+      Добавляет эффект тумана к сцене. Проставьте нули либо для <b>RGB</b>, либо для
+        <b>density</b>, чтобы отключить добавление тумана.
     </p>
 
     <img src="files/puzzles/puzzles-scenes-add-fog.jpg">
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблема с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обращайтесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
   </article></body>
 </html>
