--- a/manual/ru/puzzles/Time.html
+++ b/manual/ru/puzzles/Time.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Time Puzzles Reference - Soft8Soft</title>
+    <title>Пазлы Времени - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="How to use timing features of Verge3D Puzzles"/>
     <base href="../../../" />
@@ -9,22 +9,22 @@
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body><article>
-    <h1>Time Puzzles</h1>
+    <h1>Пазлы Времени</h1>
 
     <p>
-    These puzzles count time and trigger time-based events.
+      Эти пазлы отсчитывают время и запускают события, основанные на времени.
     </p>
 
     <img src="files/puzzles/puzzles-time.jpg">
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:puzzles_reference]
 
-    <h2>Puzzles Reference</h2>
+    <h2>Описание Пазлов</h2>
 
 
     [anchor:after]
@@ -32,7 +32,7 @@
     <h3>after</h3>
 
     <p>
-    Waits for a specified amount of time and then triggers puzzles placed inside the "do" slot.
+    Ожидает заданное количество времени, а затем запускает пазлы, помещенные в слот "do".
     </p>
 
     <img src="files/puzzles/puzzles-time-after.jpg">
@@ -43,7 +43,7 @@
     <h3>every</h3>
 
     <p>
-    Waits for a specified amount of time and then triggers puzzles placed inside the "do" slot. Then repeats.
+    Ожидает определенное количество времени, а затем запускает пазлы, помещенные в слот "do". Затем повторяется.
     </p>
 
     <img src="files/puzzles/puzzles-time-every.jpg">
@@ -54,7 +54,7 @@
     <h3>every frame</h3>
 
     <p>
-    Triggers puzzles placed inside the "do" slot every rendering frame (normally at the rate of 60 frames per second).
+    Запускает пазлы, помещенные в слот "do" каждый кадр рендеринга (обычно со скоростью 60 кадров в секунду).
     </p>
 
     <img src="files/puzzles/puzzles-time-every-frame.jpg">
@@ -65,7 +65,7 @@
     <h3>elapsed delta</h3>
 
     <p>
-    Outputs the amount of time (in seconds) passed from the previous rendering frame. Can be used with the "every frame" puzzle to implement frame-independent animation.
+      Выводит количество времени (в секундах), прошедшее с предыдущего кадра рендеринга. Может использоваться с пазлом"every frame" для реализации независимой от кадров анимации.
     </p>
 
     <img src="files/puzzles/puzzles-time-elapsed-delta.jpg">
@@ -76,7 +76,7 @@
     <h3>elapsed total</h3>
 
     <p>
-    Outputs the amount of time (in seconds) passed from the application start. Can be used with the "every frame" puzzle to implement procedural animation and various visual effects.
+      Выводит количество времени (в секундах), прошедшее с запуска приложения. Может использоваться с пазлом "every frame" для реализации процедурной анимации и различных визуальных эффектов.
     </p>
 
     <img src="files/puzzles/puzzles-time-elapsed-total.jpg">
@@ -87,10 +87,9 @@
     <h3>set timer</h3>
 
     <p>
-    Triggers puzzles placed inside the "do" slot after the specified delay.
-    Repeats this action the amount times specified in the "repeat" slot each
-    after the same delay. The specified ID can be used to override or cancel the
-    timer.
+      Запускает пазлы, помещенные в слот "do", после заданной задержки.
+      Повторяет это действие количество раз, указанное в слоте "repeat", каждый раз
+      после той же задержки. Специальный идентификатор может быть использован для отмены или прекращения действия таймера.
     </p>
 
     <img src="files/puzzles/puzzles-time-set-timer.jpg">
@@ -101,7 +100,7 @@
     <h3>remove timer</h3>
 
     <p>
-    Removes a previosly set timer by using its ID.
+      Удаляет предварительно установленный таймер, используя его ID.
     </p>
 
     <img src="files/puzzles/puzzles-time-remove-timer.jpg">
@@ -111,14 +110,14 @@
 
     <h3>system date / time</h3>
 
-    <p>Returns system date and time. Enable the GMT checkbox in order to get time of the UTC/GMT zone instead of the local time zone.</p>
+    <p>Возвращает системную дату и время. Включите флажок GMT, чтобы получить время зоны UTC/GMT вместо местного часового пояса.</p>
 
     <img src="files/puzzles/puzzles-time-get-date-time.jpg">
 
 
-    <h2>Having Troubles with Puzzles?</h2>
+    <h2>Проблема с Пазлами?</h2>
 
-    <p>Seek help on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Обращайтесь за помощью на наш <a href="https://www.soft8soft.com/forums/" target="_blank">форум</a>!</p>
 
   </article></body>
 </html>
